--- a/Localisation/AR.json
+++ b/Localisation/AR.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【تحذير】</color> - حجم تنزيل كبير",
         "ABOUT": "حول",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - تطبيق البنية التحتية والبناء\nNitro4CSR - إدارة الموارد ودمج بيانات المجتمع\nFREYCKSSON - تحديث الموارد\nTheMaintainers - إنشاء وتحديث بيانات المجتمع\n\nالناشر: ムRimgine Entertainment\n\nالبريد الإلكتروني: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - البنية التحتية وبناء التطبيق\nNitro4CSR - إدارة الموارد وتكامل بيانات المجتمع\nFREYCKSSON - تحديث الموارد\nTheMaintainers - إنشاء وتحديث بيانات المجتمع\n\nالبريد الإلكتروني للاتصال: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "يجب أن تكون جميع السيارات مُطوَّرة للنخبة بالكامل:",
         "ALL CARS SHOULD BE RESTORED:": "يجب أن يتم ترميم جميع السيارات:",
         "AUDIO": "الصوت",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "وضع <color=#FFD540>PRO</color> لعرض السيارات (معلومات تقنية)",
         "Agree": "موافق",
         "All the best races of the racers are here! Let's see this hall of fame": "أفضل سباقات السائقين موجودة هنا! دعنا نرى قاعة المشاهير",
+        "Amounts": "المبالغ",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "تم اكتشاف خطأ، نحن على علم بالمشكلة ونعمل على إيجاد حل!",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "تم اكتشاف خطأ، لقد قمنا بتحليل المشكلة وإليك كيفية إصلاحها:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "وأخيرًا، انقر لرؤية معلومات إضافية عن السيارة",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "كن جزءًا من مجتمعنا الكبير للاعبين وكن على اطلاع دائم بآخر تحديثات اللعبة!",
         "Best result and racer. Click to watch the best shift video!": "أفضل نتيجة وسائق. انقر لمشاهدة أفضل فيديو للتحويل!",
         "Boss time: ": "وقت الزعيم: ",
+        "Build delta changes...": "جاري بناء تغييرات دلتا...",
         "CAR INFO (from Vision spreadsheet)": "معلومات السيارة (من جدول الرؤية)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "السيارات في المجموعة: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "المجتمع",
         "CONFIRM CHANGES": "تأكيد التغييرات",
         "CONNECTION FAILED": "فشل الاتصال",
         "CREATORS": "المطورون",
         "CREDITS": "الاعتمادات",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – هذه اللعبة المحاكية للقيادة تعيد تعريف ما اعتقدت أنه ممكن على جهازك المحمول!\n\nبتحديد معيار جديد في رسومات ألعاب السباق، تقدم لك CSR2 سباقات السحب فائقة الواقعية في راحة يدك. تنافس ضد لاعبين حقيقيين من around the worldبسياراتك السوبر المصممة حسب الطلب.",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "يتطلب CSR<color=yellow>2</color>-HUB تنزيل بيانات: <color= #FFAA0D>{0}</color>، يرجى التأكد من عدم استخدام إنترنت محدود ثم تأكيد التنزيل",
+        "Campaigns": "الحملات",
         "Car name": "اسم السيارة",
+        "Check minor updates...": "جاري التحقق من التحديثات الثانوية...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "تحقق من تكلفة كل جزء وتأثيرات ترقيات المرحلة السادسة!",
+        "Check release updates...": "جاري التحقق من تحديثات الإصدار...",
         "City camera speed": "سرعة كاميرا المدينة",
         "Click here to change the leaderboard!": "انقر هنا لتغيير لوحة الصدارة!",
         "Click to change the car type!": "انقر لتغيير نوع السيارة!",
         "DATABASE OUTDATED": "قاعدة البيانات قديمة",
         "DONATION": "تبرع",
         "DYNO:": "الدينو:",
+        "Database liquidation...": "جاري تصفية قاعدة البيانات...",
         "Do you have your own idea on how to improve the app?": "هل لديك فكرتك الخاصة حول كيفية تحسين التطبيق؟",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "لا تنسَ تحديد الحملة التي ترغب في دعمها\nوإلا سيحتسب المال للحملة الأكبر",
+        "Donater": "متبرع",
         "Download failed, check your internet connection and restart the app": "فشل التنزيل، تحقق من اتصال الإنترنت وأعد تشغيل التطبيق",
         "Driver": "سائق",
         "ELITE MAX": "النخبة القصوى",
@@ -58,23 +66,31 @@
         "FAVORITEs": "المفضلة",
         "FINAL DRIVE": "القوة النهائية",
         "FPS limiter": "محدد معدل الإطارات",
+        "Failed download, check internet connection and restart app": "فشل التحميل، يرجى التحقق من الاتصال بالإنترنت وإعادة تشغيل التطبيق",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "أخيرًا يمكننا رؤية أسرع اللاعبين وسياراتهم. تعال معي، سأريك!",
         "Find out how many elite components you need to fully upgrade your car!": "اكتشف عدد مكونات النخبة التي تحتاجها لترقية سيارتك بالكامل!",
+        "Finishing...": "جاري الإنهاء...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "للتشغيل المستقر للتطبيق، يُنصح بتوفر مساحة تخزين لا تقل عن 5 جيجابايت على جهازك. قم بتحرير المساحة وحاول مرة أخرى.",
         "GRAPHICS": "الرسومات",
         "Gacha imports": "واردات الغاتشا",
         "Get update!": "احصل على التحديث!",
         "Get updated information on how many Legends components you need to restore your car!": "احصل على معلومات محدثة حول عدد مكونات الأساطير التي تحتاجها لترميم سيارتك!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "جاري الحصول على الإصدار {0}...",
+        "Getting releases data...": "جاري الحصول على بيانات الإصدارات...",
+        "Getting updates {0}...": "جاري الحصول على التحديثات {0}...",
         "Graphics quality": "جودة الرسومات",
+        "I have an idea to improve your app:": "لدي فكرة لتحسين تطبيقك:",
         "I know it already": "أعرف ذلك مسبقًا",
         "INBOX": "الرسائل",
         "Ignore": "تجاهل",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "في عالم حيث تحدد أجزاء الثانية الفارق بين المحترفين والأساطير، كن السائق الأول على الساحة.\n\nأشعْك خيالاتك في السباق وجرّب thrill تجربة دفع حدود مركباتك المفضلة عالية الأداء إلى أقصى حد.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "لضمان العمل المناسب، يتطلب التطبيق تنزيل بيانات إضافية، يرجى التحقق من اتصال الإنترنت والمحاولة مرة أخرى",
+        "Initialization...": "جاري التهيئة...",
         "Initializing database...": "جاري تهيئة قاعدة البيانات...",
+        "LET'S GO": "لنبدأ",
         "LINKER": "الرابط",
         "LOADING SCREEN": "شاشة التحميل",
+        "Leaderboard": "لوحة المتصدرين",
         "Let's choose the unrestored version": "دعنا نختار النسخة غير المرممة",
         "Let's go!": "لنذهب!",
         "Let's look at ELITES": "لنلقِ نظرة على سيارات النخبة",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "دعونا نجعل التطبيق أروع معًا!",
         "MILESTONE SEASON CAR": "سيارة الموسم البارزة",
         "Main campaigns": "الحملات الرئيسية",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "تعرف على تحديث CSR2 الإصدار 5.9.0! \n\nما الجديد: \n- تحسينات متجر الويب \n- إضافة تتبع الانطلاق والتغيير المثالي للإنجازات \n- إصلاح الأخطاء والتحسين \n\nتحقق من Linker للتنزيل. قيادة سعيدة!",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "تعرف على تحديث المحور 1.1.4! \nما الجديد: \n- ميزة الرسائل الجديدة \n- إضافة عرض المجموعات بدون جائزة \n- إضافة موسيقى من حدث الثمانينيات \n- إصلاح الأخطاء والتحسين \n\nقيادة سعيدة!",
         "Music clip": "مقطع موسيقي",
         "Music volume": "مستوى الموسيقى",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "أكسيد النيتروس",
         "NOT ENOUGH STORAGE": "مساحة التخزين غير كافية",
         "Need to update or add to your community?": "هل تحتاج إلى تحديث أو إضافة لمجتمعك؟",
+        "No minor updates... Welcome to HUB!": "لا توجد تحديثات ثانوية... مرحبًا بك في HUB!",
+        "No new releases... checking minor": "لا توجد إصدارات جديدة... جاري التحقق من الثانوية",
         "Number of upgrades and fusion parts": "عدد الترقيات وأجزاء الدمج",
         "OFF": "إيقاف",
         "ON": "تشغيل",
         "OPEN CONFIGURATOR": "فتضبيط الإعدادات",
         "OTHERS": "أخرى",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "عفوًا، لقد فقدت الاتصال بالإنترنت وقمنا باعتراض بعض السيارات. حاول مرة أخرى في المرة القادمة.",
         "Other": "أخرى",
         "PRIZE CAR": "سيارة الجائزة",
         "Petrol or electric car": "سيارة بنزين أو كهربائية",
+        "Please update the details for my community:": "يرجى تحديث التفاصيل لمجتمعي:",
         "Preparing the city...": "جاري تحضير المدينة...",
         "Price of full car upgrades": "سعر ترقيات السيارة الكاملة",
         "Price of the car:": "سعر السيارة:",
@@ -112,6 +133,7 @@
         "Restart": "إعادة تشغيل",
         "SEASON CARS": "سيارات الموسم",
         "SETTINGS": "الإعدادات",
+        "SOON": "قريبًا",
         "Save": "حفظ",
         "Secondary campaigns": "الحملات الثانوية",
         "Sites": "المواقع",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "يمكن الحصول على هذه السيارة عن طريق هزيمة الزعيم",
         "This car cannot be obtained anywhere": "لا يمكن الحصول على هذه السيارة في أي مكان",
         "This car is a part of a collection and can be purchased with collection credits.": "هذه السيارة جزء من مجموعة ويمكن شراؤها باستخدام نقاط المجموعة.",
+        "This is downloadable content... Cars will arrive soon, please wait.": "هذا محتوى قابل للتنزيل... السيارات ستصل قريبًا، يرجى الانتظار.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "هذا هو عرض السيارات - معلومات عن جميع السيارات مجمعة هنا! دعنا نرى",
         "This is the podium, the best cars and drivers show off here": "هذه هي المنصة، أفضل السيارات والسائقين يعرضون هنا",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "تم إنشاء هذا المشروع لأتمتة وجمع المعلومات الضرورية للعبة في مكان واحد!\n\nجميع موارد التطبيق تقريبًا تعود للعبة CSR2 ومملوكة لـ NaturalMotion => Zynga => Take-Two Interactive. الموارد المستخدمة هي لعرض معلومات مرجعية للمجتمع فقط ولا شيء أكثر.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "لقد قمنا بتنفيذ قسم الرسائل لتبقى على اطلاع بجميع الأحداث المهمة في مركز CSR2!\r\n\r\n← اختر رسالة لعرضها",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "سنبدأ التطوير النشط للوظيفة من هذا القسم بعد جمع الأموال اللازمة لها.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "نحن فخورون بثراء المعرفة التي تراكمت في مجتمعنا ونوفر أماكن لمشاركة ومتابعة أفضل ممارسات السباق!",
+        "Welcome to HUB!": "مرحبًا بك في HUB!",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "اكتب لنا: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "يمكنك إضافة سيارات مهمة إلى المفضلة",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "يمكنك العثور على السيارة التي تريدها عبر الشركات المصنعة أو مجموعات السيارات. هناك حتى قسم المفضلة!",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "يمكنك رؤية المواصفات البصرية هنا",
         "You could have won this car in the following seasons:": "كان يمكنك الفوز بهذه السيارة في المواسم التالية:",
         "Your app version is outdated. An update is required.": "إصدار التطبيق الخاص بك قديم. يلزم إجراء تحديث.",
+        "corrupted archive or not enough space...": "أرشيف تالف أو مساحة تخزين غير كافية...",
+        "finished": "تم الانتهاء",
+        "finished - {0} seconds": "تم الانتهاء - {0} ثانية",
+        "finishing release...": "جاري إنهاء الإصدار...",
         "text coming soon...": "النص قريبًا...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "تعرف على تحديث CSR2 الإصدار 5.9.0! \n\nما الجديد: \n- تحسينات متجر الويب \n- إضافة تتبع الانطلاق والتغيير المثالي للإنجازات \n- إصلاح الأخطاء والتحسين \n\nتحقق من Linker للتنزيل. قيادة سعيدة!"
+        "unpacking...": "جاري فك الضغط..."
     }
 }
