--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ACHTUNG】</color> -    GROßER DOWNLOAD",
         "ABOUT": "ÜBER",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruktur und Build-Anwendung\nNitro4CSR - Ressourcenverwaltung und Integration von Community-Daten\nFREYCKSSON - Ressourcenaktualisierung\nTheMaintainers - Erstellung und Aktualisierung von Community-Daten\n\nKontakt-E-Mail: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "ALLE AUTOS MÜSSEN ELITE-MAXIMIERT WERDEN:",
         "ALL CARS SHOULD BE RESTORED:": "ALLE AUTOS MÜSSEN RESTAURIERT WERDEN:",
         "AUDIO": "AUDIO",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> Modus  (technische Infos)",
         "Agree": "Akzeptieren",
         "All the best races of the racers are here! Let's see this hall of fame": "Die besten Zeiten von Fahrern findest du hier",
+        "Amounts": "Beträge",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "Ein Fehler wurde erkannt. Wir sind bereits über das Problem informiert und arbeiten an einer Lösung!",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "Ein Fehler wurde erkannt. Wir haben das Problem analysiert und so können Sie es beheben:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "Zum Abschluss, tippe hier für Zusatzinformationen über ein Auto",
@@ -29,6 +30,7 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "Werden Sie Teil unserer großen Gaming-Community und bleiben Sie über die neuesten Spiel-Updates auf dem Laufenden!",
         "Best result and racer. Click to watch the best shift video!": "Beste Zeit und der Fahrer. Tippe zum aufrufen des Videos mit Schaltanweisungen.",
         "Boss time: ": "Boss Zeit: ",
+        "Build delta changes...": "Baue Delta-Änderungen...",
         "CAR INFO (from Vision spreadsheet)": "AUTO INFO (Project Vision)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "AUTOS IN DER SAMMLUNG: <color=red>{0}</color>",
         "COMMUNITY": "COMMUNITY",
@@ -36,17 +38,23 @@
         "CONNECTION FAILED": "VERBINDUNG FEHLGESCHLAGEN",
         "CREATORS": "ERSTELLER",
         "CREDITS": "CREDITS",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – Dieses Rennsimulatorspiel definiert neu, was Sie auf Ihrem Mobilgerät für möglich hielten!\n\nCSR2 setzt einen neuen Standard in der Bilddarstellung von Rennspielen und bringt hyperrealistisches Drag Racing in Ihre Handfläche. Treten Sie gegen Live-Spieler auf der ganzen Welt mit Ihren maßgefertigten Supersportwagen an.",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB muss Daten herunterladen: <color= #FFAA0D>{0}</color>, bitte nutze einen Internetzugang ohne Datenbegrenzung.",
+        "Campaigns": "Kampagnen",
         "Car name": "Modellname",
+        "Check minor updates...": "Prüfe kleinere Updates...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Hier findest du die Preise für Verbesserungen und wie gut alle Stufe 6 Teile sind",
+        "Check release updates...": "Prüfe Release-Updates...",
         "City camera speed": "Geschwindigkeit der Stadtkamera ",
         "Click here to change the leaderboard!": "Tippe hier, um die Rangliste zu wechseln",
         "Click to change the car type!": "Tippe hier um den Autotyp zu wechseln.",
         "DATABASE OUTDATED": "DATENBANK VERALTET",
         "DONATION": "SPENDE",
         "DYNO:": "PRÜFSTAND:",
+        "Database liquidation...": "Bereinige Datenbank...",
         "Do you have your own idea on how to improve the app?": "Haben Sie eine eigene Idee, wie man die App verbessern kann?",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "Vergessen Sie nicht, die zu unterstützende Kampagne anzugeben\nsonst wird das Geld der größten Kampagne zugewiesen",
+        "Donater": "Spender",
         "Download failed, check your internet connection and restart the app": "Download fehlgeschlagen, prüfe deine Internetverbindung und starte die App neu",
         "Driver": "Fahrer",
         "ELITE MAX": "ELITE MAX",
@@ -58,23 +66,31 @@
         "FAVORITEs": "FAVORITEN",
         "FINAL DRIVE": "ENDÜBERSETZUNG",
         "FPS limiter": "FPS Limit",
+        "Failed download, check internet connection and restart app": "Download fehlgeschlagen, Internetverbindung prüfen und App neu starten",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Zum Abschluss lass mich dir die schnellsten Fahrer und deren Fahrzeuge zeigen. Komm!",
         "Find out how many elite components you need to fully upgrade your car!": "Hier siehst du wie viele Elite Teile du brauchst um das Auto maximal aufzubauen",
+        "Finishing...": "Wird abgeschlossen...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "Für einen stabilen Betrieb der App wird empfohlen, mindestens 5 GB freien Speicherplatz auf Ihrem Gerät zu haben. Speicherplatz freigeben und erneut versuchen.",
         "GRAPHICS": "GRAFIK",
         "Gacha imports": "Seltene Importe",
         "Get update!": "Update laden!",
         "Get updated information on how many Legends components you need to restore your car!": "Erhalte aktuelle Infos, wie viele Legenden Komponenten du brauchst um dein Auto zu restaurieren!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "Release {0} wird abgerufen...",
+        "Getting releases data...": "Release-Daten werden abgerufen...",
+        "Getting updates {0}...": "Updates {0} werden abgerufen...",
         "Graphics quality": "Grafikqualität",
+        "I have an idea to improve your app:": "Ich habe eine Idee, um Ihre App zu verbessern:",
         "I know it already": "Überspringen",
         "INBOX": "NACHRICHTEN",
         "Ignore": "Ignorieren",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "In einer Welt, in der Hundertstelsekunden den Unterschied zwischen Profis und Legenden ausmachen, werden Sie der beste Fahrer der Szene.\n\nEntfachen Sie Ihre Rennfantasien und erleben Sie den Nervenkitzel, die Grenzen Ihrer liebsten Hochleistungsfahrzeuge auszureizen.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again",
+        "Initialization...": "Initialisierung...",
         "Initializing database...": "Datenbank initialisieren...",
+        "LET'S GO": "LOS GEHT'S",
         "LINKER": "LINKMODUL",
         "LOADING SCREEN": "LADEBILDSCHIRM",
+        "Leaderboard": "Bestenliste",
         "Let's choose the unrestored version": "Lass uns die unrestaurierte Variante auswählen",
         "Let's go!": "Los gehts!",
         "Let's look at ELITES": "Lass uns auf ELITE schauen",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "Lassen Sie uns die App gemeinsam noch cooler machen!",
         "MILESTONE SEASON CAR": "MEILENSTEIN SEASON AUTO",
         "Main campaigns": "Hauptkampagnen",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Stellt euch das CSR2-Update 5.9.0 vor! \n\nNeuerungen: \n- Verbesserungen am Webstore \n- Perfekte Schalt- und Startverfolgung für Erfolge hinzugefügt \n- Fehlerbehebungen & Optimierungen \n\nÜberprüfe Linker zum Download. Viel Spaß beim Rennen!",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Stellt euch das Hub-Update 1.1.4 vor! \nNeuerungen: \n- Neue NACHRICHTEN-Funktion \n- Anzeige von Kollektionen ohne Preis \n- Musik vom 80er-Event hinzugefügt \n- Fehlerbehebungen & Optimierungen \n\nViel Spaß beim Rennen!",
         "Music clip": "Musik",
         "Music volume": "Musik-Lautstärke",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "NITRO",
         "NOT ENOUGH STORAGE": "NICHT GENUG SPEICHERPLATZ",
         "Need to update or add to your community?": "Müssen Sie Ihre Community aktualisieren oder erweitern?",
+        "No minor updates... Welcome to HUB!": "Keine kleineren Updates... Willkommen im HUB!",
+        "No new releases... checking minor": "Keine neuen Releases... prüfe kleinere Updates",
         "Number of upgrades and fusion parts": "Anzahl an Verbesserungen und Fusionsteilen",
         "OFF": "AUS",
         "ON": "AN",
         "OPEN CONFIGURATOR": "KONFIGURATOR ÖFFNEN",
         "OTHERS": "ANDERE",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "Hoppla, Ihre Internetverbindung wurde unterbrochen und wir haben einige der Autos abgefangen. Versuchen Sie es beim nächsten Mal erneut.",
         "Other": "Andere",
         "PRIZE CAR": "PREISAUTO",
         "Petrol or electric car": "Verbrenner- oder Elektro- Auto",
+        "Please update the details for my community:": "Bitte aktualisieren Sie die Details für meine Community:",
         "Preparing the city...": "Die Stadt vorbereiten...",
         "Price of full car upgrades": "Preis für alle Verbesserungen",
         "Price of the car:": "Preis des Autos:",
@@ -112,6 +133,7 @@
         "Restart": "Neustarten",
         "SEASON CARS": "SEASONAUTOS",
         "SETTINGS": "EINSTELLUNGEN",
+        "SOON": "BALD",
         "Save": "Speichern",
         "Secondary campaigns": "Nebenkampagnen",
         "Sites": "Websites",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "Dieses Auto erhälts du für das besiegen eines Bosses",
         "This car cannot be obtained anywhere": "Dieses Auto kann man nicht erhalten",
         "This car is a part of a collection and can be purchased with collection credits.": "Dieses Auto ist Teil einer Sammlung und mit Sammlungsmünzen gekauft werden.",
+        "This is downloadable content... Cars will arrive soon, please wait.": "Dies ist herunterladbarer Inhalt... Die Autos werden in Kürze eintreffen, bitte warten Sie.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Das ist die AUTOSHOW - hier werden Infos zu allen Autos gesammelt. Schau's dir mal an.",
         "This is the podium, the best cars and drivers show off here": "Das ist das Podium, die besten Autos und Fahrer protzen hier.",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Dieses Tool wurde zum sammeln und kombinieren von Informationen erstellt!\n\nFast alle Inhalte sind aus CSR2 und gehören NaturalMotion => Zynga => Take-Two Interactive. Die genutzten Inhalte werden nur zum Anzeigen von Informationen der Community genutzt und sonst nichts.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "Wir haben NACHRICHTEN implementiert, damit Sie über alle wichtigen Ereignisse im CSR2-HUB informiert sind!\r\n\r\n← Wählen Sie eine Nachricht zum Anzeigen aus.",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "Wir werden mit der aktiven Entwicklung der Funktion aus diesem Abschnitt beginnen, nachdem die notwendigen Mittel dafür gesammelt wurden.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "Wir sind stolz auf den Wissensschatz, den unsere Community angesammelt hat, und bieten Orte zum Teilen und Verfolgen der besten Rennpraktiken!",
+        "Welcome to HUB!": "Willkommen im HUB!",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "Schreiben Sie uns: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "Die kannt dir wichtige Autos als Favorit markieren",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Du kannst Autos nach Marke oder nach Gruppe suchen. Es gibt sogar ein Favoriten-Bereich!",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "Hier kannst du auf Import-Varianten zugreifen",
         "You could have won this car in the following seasons:": "Dieses Auto konnte in folgender Saison gewonnen werden:",
         "Your app version is outdated. An update is required.": "Ihre App-Version ist veraltet. Eine Aktualisierung ist erforderlich.",
+        "corrupted archive or not enough space...": "beschädigtes Archiv oder nicht genug Speicherplatz...",
+        "finished": "abgeschlossen",
+        "finished - {0} seconds": "abgeschlossen - {0} Sekunden",
+        "finishing release...": "Release wird abgeschlossen...",
         "text coming soon...": "Text kommt bald...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Stellt euch das CSR2-Update 5.9.0 vor! \n\nNeuerungen: \n- Verbesserungen am Webstore \n- Perfekte Schalt- und Startverfolgung für Erfolge hinzugefügt \n- Fehlerbehebungen & Optimierungen \n\nÜberprüfe Linker zum Download. Viel Spaß beim Rennen!"
-		}
+        "unpacking...": "wird entpackt..."
+    }
 }
