--- a/Localisation/FR.json
+++ b/Localisation/FR.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<couleur=orange>【ATTENTION】</couleur> - TAILLE DE TÉLÉCHARGEMENT IMPORTANTE",
         "ABOUT": "À PROPOS",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastructure et application de construction\nNitro4CSR - Gestion des ressources et intégration des données communautaires\nFREYCKSSON - Mise à jour des ressources\nTheMaintainers - Création et mise à jour des données communautaires\n\nÉditeur : ムRimgine Entertainment\n\nE-mail : csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastructure et application de build\nNitro4CSR - Gestion des ressources et intégration des données communautaires\nFREYCKSSON - Mise à jour des ressources\nTheMaintainers - Création et mise à jour des données communautaires\n\nE-mail de contact : csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "TOUTES LES VOITURES DOIVENT ÊTRE AU NIVEAU ÉLITE MAXIMAL:",
         "ALL CARS SHOULD BE RESTORED:": "TOUTES LES VOITURES DOIVENT ÊTRE RESTAURÉES:",
         "AUDIO": "AUDIO",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Mode <couleur=#FFD540>PRO</couleur> du SALON DE L'AUTO (informations techniques)",
         "Agree": "Accepter",
         "All the best races of the racers are here! Let's see this hall of fame": "Toutes les meilleures courses des pilotes sont ici ! Voyons ce temple de la renommée.",
+        "Amounts": "Montants",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "Une erreur a été détectée. Nous avons pris connaissance du problème et travaillons à sa résolution !",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "Une erreur a été détectée. Voici comment la résoudre après analyse :\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "Enfin, cliquez pour voir des informations supplémentaires sur la voiture",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "Rejoignez notre grande communauté de joueurs et restez informé des dernières mises à jour du jeu !",
         "Best result and racer. Click to watch the best shift video!": "Meilleur résultat et pilote. Cliquez pour voir la vidéo du meilleur passage !",
         "Boss time: ": "Temps du boss : ",
+        "Build delta changes...": "Construction des changements delta...",
         "CAR INFO (from Vision spreadsheet)": "INFOS VOITURE (visualisation)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "VOITURES EN COLLECTION: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "COMMUNAUTÉ",
         "CONFIRM CHANGES": "CONFIRMER LES MODIFICATIONS",
         "CONNECTION FAILED": "ÉCHEC DE CONNEXION",
         "CREATORS": "CRÉATEURS",
         "CREDITS": "CRÉDITS",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – Ce jeu de simulateur de conduite redéfinit ce que vous pensiez possible sur votre appareil mobile !\n\nÉtablissant une nouvelle norme en matière de visuels de jeux de course, CSR2 offre des courses de dragster hyperréalistes dans le creux de votre main. Affrontez des joueurs en direct du monde entier avec vos supercars personnalisées.",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<couleur=yellow>2</couleur>-HUB doit télécharger des données : <couleur= #FFAA0D>{0}</couleur>. Vérifiez que vous n'utilisez pas un réseau limité, puis confirmez le téléchargement.",
+        "Campaigns": "Campagnes",
         "Car name": "Nom de la voiture",
+        "Check minor updates...": "Vérification des mises à jour mineures...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Découvrez le coût de chaque pièce et les effets des améliorations de niveau 6 !",
+        "Check release updates...": "Vérification des mises à jour de version...",
         "City camera speed": "Vitesse de la caméra en ville",
         "Click here to change the leaderboard!": "Cliquez ici pour modifier le classement !",
         "Click to change the car type!": "Cliquez pour changer le type de voiture !",
         "DATABASE OUTDATED": "BASE DE DONNÉES OBSOLÈTE",
         "DONATION": "DON",
         "DYNO:": "DYNO :",
+        "Database liquidation...": "Nettoyage de la base de données...",
         "Do you have your own idea on how to improve the app?": "Vous avez votre propre idée pour améliorer l'application ?",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "N'oubliez pas d'indiquer la campagne à soutenir\nsinon l'argent sera attribué à la plus grande campagne",
+        "Donater": "Donateur",
         "Download failed, check your internet connection and restart the app": "Échec du téléchargement. Vérifiez votre connexion Internet et redémarrez l'appli.",
         "Driver": "Pilote",
         "ELITE MAX": "ÉLITE MAX",
@@ -58,23 +66,31 @@
         "FAVORITEs": "FAVORIS",
         "FINAL DRIVE": "TRANSMISSION FINALE",
         "FPS limiter": "Limiteur de FPS",
+        "Failed download, check internet connection and restart app": "Téléchargement échoué, vérifiez votre connexion Internet et redémarrez l'application",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Enfin, nous pouvons voir les joueurs les plus rapides et leurs voitures. Suivez-moi !",
         "Find out how many elite components you need to fully upgrade your car!": "Découvrez combien de composants élite sont nécessaires pour améliorer entièrement votre voiture !",
+        "Finishing...": "Finalisation...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "Pour un fonctionnement stable de l’application, il est recommandé de disposer d’au moins 5 Go d’espace de stockage libre sur votre appareil. Libérez de l’espace et réessayez.",
         "GRAPHICS": "GRAPHISMES",
         "Gacha imports": "Importations Gacha",
         "Get update!": "Mettre à jour !",
         "Get updated information on how many Legends components you need to restore your car!": "Obtenez des informations à jour sur les composants Legends nécessaires pour restaurer votre voiture !",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "Obtention de la version {0}...",
+        "Getting releases data...": "Obtention des données des versions...",
+        "Getting updates {0}...": "Obtention des mises à jour {0}...",
         "Graphics quality": "Qualité graphique",
+        "I have an idea to improve your app:": "J'ai une idée pour améliorer votre application :",
         "I know it already": "Je le sais déjà",
         "INBOX": "MESSAGES",
         "Ignore": "Ignorer",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "Dans un monde où les centièmes de seconde font la différence entre les pros et les légendes, devenez le pilote n°1 de la scène.\n\nEnflammez vos fantasmes de course et vivez le frisson de repousser les limites de vos véhicules hautes performances préférés.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Pour fonctionner correctement, l'application nécessite des données supplémentaires. Vérifiez votre connexion Internet et réessayez.",
+        "Initialization...": "Initialisation...",
         "Initializing database...": "Initialisation de la base de données...",
+        "LET'S GO": "ALLONS-Y",
         "LINKER": "CONNECTEUR",
         "LOADING SCREEN": "ÉCRAN DE CHARGEMENT",
+        "Leaderboard": "Classement",
         "Let's choose the unrestored version": "Choisissons la version non restaurée",
         "Let's go!": "Allons-y !",
         "Let's look at ELITES": "Regardons les ÉLITES",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "Rendons l'application encore plus géniale ensemble !",
         "MILESTONE SEASON CAR": "VOITURE PHARE DE LA SAISON",
         "Main campaigns": "Campagnes principales",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Découvrez la mise à jour CSR2 5.9.0 ! \n\nNouveautés : \n- Améliorations du magasin en ligne \n- Suivi des départs et changements de vitesses parfaits pour les succès \n- Corrections de bugs et optimisation \n\nVérifiez Linker pour télécharger. Bonne course !",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Découvrez la mise à jour du hub 1.1.4 ! \nNouveautés : \n- Nouvelle fonction MESSAGES \n- Affichage des collections sans récompense \n- Musique de l'événement 80s ajoutée \n- Corrections de bugs et optimisation \n\nBonne course !",
         "Music clip": "Clip musical",
         "Music volume": "Volume de la musique",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "PROTOXYDE D'AZOTE",
         "NOT ENOUGH STORAGE": "ESPACE DE STOCKAGE INSUFFISANT",
         "Need to update or add to your community?": "Besoin de mettre à jour ou d'ajouter à votre communauté ?",
+        "No minor updates... Welcome to HUB!": "Aucune mise à jour mineure... Bienvenue sur le HUB !",
+        "No new releases... checking minor": "Aucune nouvelle version... vérification des mises à jour mineures",
         "Number of upgrades and fusion parts": "Nombre d'améliorations et de pièces de fusion",
         "OFF": "DÉSACTIVÉ",
         "ON": "ACTIVÉ",
         "OPEN CONFIGURATOR": "OUVRIR LE CONFIGURATEUR",
         "OTHERS": "AUTRES",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "Oups, vous avez perdu votre connexion Internet et nous avons intercepté certaines voitures. Réessayez la prochaine fois.",
         "Other": "Autre",
         "PRIZE CAR": "VOITURE-RÉCOMPENSE",
         "Petrol or electric car": "Voiture essence ou électrique",
+        "Please update the details for my community:": "Veuillez mettre à jour les détails de ma communauté :",
         "Preparing the city...": "Préparation de la ville...",
         "Price of full car upgrades": "Prix des améliorations complètes",
         "Price of the car:": "Prix de la voiture :",
@@ -112,6 +133,7 @@
         "Restart": "Redémarrer",
         "SEASON CARS": "VOITURES DE SAISON",
         "SETTINGS": "PARAMÈTRES",
+        "SOON": "BIENTÔT",
         "Save": "Sauvegarder",
         "Secondary campaigns": "Campagnes secondaires",
         "Sites": "Sites",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "Cette voiture s'obtient en battant le boss",
         "This car cannot be obtained anywhere": "Cette voiture n'est disponible nulle part",
         "This car is a part of a collection and can be purchased with collection credits.": "Cette voiture fait partie d'une collection et peut être achetée avec des crédits de collection.",
+        "This is downloadable content... Cars will arrive soon, please wait.": "Ceci est un contenu téléchargeable... Les voitures arriveront bientôt, veuillez patienter.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Voici le SALON DE L'AUTO : toutes les infos sur les voitures sont ici ! Voyons cela.",
         "This is the podium, the best cars and drivers show off here": "Voici le podium, où les meilleures voitures et pilotes se présentent.",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Ce projet a été créé pour automatiser et centraliser les informations du jeu !\n\nPresque toutes les ressources de l'appli appartiennent à CSR2 et sont la propriété de NaturalMotion => Zynga => Take-Two Interactive. Elles servent uniquement à afficher des informations de référence pour la communauté.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "Nous avons mis en place MESSAGES pour que vous soyez informé de tous les événements importants dans le CSR2-HUB !\r\n\r\n← Sélectionnez un message pour le consulter.",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "Nous commencerons le développement actif de la fonction de cette section après avoir collecté les fonds nécessaires.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "Nous sommes fiers de la richesse des connaissances accumulées par notre communauté et proposons des espaces pour partager et suivre les meilleures pratiques de course !",
+        "Welcome to HUB!": "Bienvenue sur le HUB !",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "Écrivez-nous : <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "Vous pouvez ajouter des voitures importantes aux favoris",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Recherchez des voitures par marque ou groupe. Il y a même une section favoris !",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "Consultez les spécifications visuelles ici",
         "You could have won this car in the following seasons:": "Vous auriez pu gagner cette voiture lors des saisons suivantes :",
         "Your app version is outdated. An update is required.": "Votre version de l'application est obsolète. Une mise à jour est nécessaire.",
+        "corrupted archive or not enough space...": "archive corrompue ou espace insuffisant...",
+        "finished": "terminé",
+        "finished - {0} seconds": "terminé - {0} secondes",
+        "finishing release...": "finalisation de la version...",
         "text coming soon...": "texte à venir...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Découvrez la mise à jour CSR2 5.9.0 ! \n\nNouveautés : \n- Améliorations du magasin en ligne \n- Suivi des départs et changements de vitesses parfaits pour les succès \n- Corrections de bugs et optimisation \n\nVérifiez Linker pour télécharger. Bonne course !"
-		}
+        "unpacking...": "décompression..."
+    }
 }
