--- a/Localisation/JA.json
+++ b/Localisation/JA.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> - 大容量ダウンロード",
         "ABOUT": "概要",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - インフラストラクチャーおよびビルドアプリケーション\nNitro4CSR - リソース管理とコミュニティデータ統合\nFREYCKSSON - リソース更新\nTheMaintainers - コミュニティデータの作成と更新\n\n発行元: ムRimgine Entertainment\n\n連絡先メール: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - インフラとビルドアプリケーション\nNitro4CSR - リソース管理とコミュニティデータの統合\nFREYCKSSON - リソース更新\nTheMaintainers - コミュニティデータの作成と更新\n\n連絡先メール: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "全車両をエリート最大限にすべき:",
         "ALL CARS SHOULD BE RESTORED:": "全車両を修復すべき:",
         "AUDIO": "オーディオ",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "オートショー<color=#FFD540>PRO</color>モード（技術情報）",
         "Agree": "同意する",
         "All the best races of the racers are here! Let's see this hall of fame": "最高のレーサーたちのレースがここに！殿堂を見てみよう！",
+        "Amounts": "金額",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "エラーが検出されました。問題を認識し、解決に取り組んでいます！",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "エラーが検出されました。問題を分析し、以下の方法で修正できます:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "最後に、車の詳細情報を見るにはクリックしてください",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "私たちの大きなゲーミングコミュニティの一員になり、最新のゲームアップデートを常に把握しましょう！",
         "Best result and racer. Click to watch the best shift video!": "ベスト結果とレーサー。ベストシフト動画を見るにはクリック！",
         "Boss time: ": "ボスタイム：",
+        "Build delta changes...": "差分変更をビルド中...",
         "CAR INFO (from Vision spreadsheet)": "車両情報（ビジョンスプレッドシート）",
         "CARS IN COLLECTION: <color=red>{0}</color>": "コレクション内の車両: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "コミュニティ",
         "CONFIRM CHANGES": "変更を確定",
         "CONNECTION FAILED": "接続失敗",
         "CREATORS": "クリエイター",
         "CREDITS": "クレジット",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – このドライビングシミュレーターゲームは、モバイルデバイスで可能だと思っていたことを再定義します！\n\nレースゲームのビジュアルにおける新基準を設定し、CSR2は超現実的なドラッグレースを手のひらに届けます。あなたがカスタマイズしたスーパーカーで、世界中のライブプレイヤーと競いましょう。",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUBはデータのダウンロードが必要です：<color= #FFAA0D>{0}</color>。通信制限がないことを確認し、ダウンロードを承認してください",
+        "Campaigns": "キャンペーン",
         "Car name": "車名",
+        "Check minor updates...": "マイナーアップデートを確認中...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "各パーツのコストとステージ6アップグレードの効果を確認！",
+        "Check release updates...": "リリースアップデートを確認中...",
         "City camera speed": "都市カメラ速度",
         "Click here to change the leaderboard!": "リーダーボードを変更するにはここをクリック！",
         "Click to change the car type!": "車種を変更するにはクリック！",
         "DATABASE OUTDATED": "データベースが古い",
         "DONATION": "寄付",
         "DYNO:": "ダイノ：",
+        "Database liquidation...": "データベースの整理中...",
         "Do you have your own idea on how to improve the app?": "アプリの改善方法についてご自身のアイデアをお持ちですか？",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "支援するキャンペーンを指定してください\n指定がない場合、最大のキャンペーンに充当されます",
+        "Donater": "寄付者",
         "Download failed, check your internet connection and restart the app": "ダウンロード失敗。接続を確認し、アプリを再起動してください",
         "Driver": "ドライバー",
         "ELITE MAX": "エリートMAX",
@@ -58,23 +66,31 @@
         "FAVORITEs": "お気に入り",
         "FINAL DRIVE": "ファイナルドライブ",
         "FPS limiter": "FPSリミッター",
+        "Failed download, check internet connection and restart app": "ダウンロードに失敗しました、インターネット接続を確認し、アプリを再起動してください",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "最速プレイヤーとその車両を確認できます！一緒に見に行きましょう！",
         "Find out how many elite components you need to fully upgrade your car!": "車を完全に強化するためのエリートコンポーネント数を確認！",
+        "Finishing...": "終了処理中...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "アプリを安定的に動作させるため、デバイスに少なくとも5GBの空きストレージが必要です。空き容量を確保してから再度お試しください。",
         "GRAPHICS": "グラフィックス",
         "Gacha imports": "ガチャ輸入",
         "Get update!": "更新を取得！",
         "Get updated information on how many Legends components you need to restore your car!": "車を修復するためのレジェンドコンポーネント数を最新情報で確認！",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "リリース {0} を取得中...",
+        "Getting releases data...": "リリースデータを取得中...",
+        "Getting updates {0}...": "アップデート {0} を取得中...",
         "Graphics quality": "グラフィック品質",
+        "I have an idea to improve your app:": "アプリを改善するアイデアがあります:",
         "I know it already": "既に知っています",
         "INBOX": "メッセージ",
         "Ignore": "無視",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "100分の1秒がプロと伝説の違いを記す世界で、シーンのトップドライバーになりましょう。\n\nあなたのレーシングファンタジーに火をつけ、お気に入りの高性能車の限界に挑戦するスリルを体験してください。",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "正常動作のため追加データが必要です。接続を確認し再試行してください",
+        "Initialization...": "初期化中...",
         "Initializing database...": "データベースを初期化中...",
+        "LET'S GO": "さあ、始めよう",
         "LINKER": "リンクツール",
         "LOADING SCREEN": "ローディング画面",
+        "Leaderboard": "リーダーボード",
         "Let's choose the unrestored version": "未修復バージョンを選択",
         "Let's go!": "レッツゴー！",
         "Let's look at ELITES": "エリート車両を見てみよう",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "一緒にアプリをもっとクールにしましょう！",
         "MILESTONE SEASON CAR": "マイルストーンシーズンカー",
         "Main campaigns": "メインキャンペーン",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2アップデート5.9.0をご紹介！ \n\n新機能: \n- ウェブストアの改善 \n- 実績のためのパーフェクトシフトとローンチトラッキングの追加 \n- 不具合修正と最適化 \n\nダウンロードはLinkerで確認してください。楽しいレーシングを！",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "ハブアップデート1.1.4をご紹介！ \n新機能: \n- 新メッセージ機能 \n- 報酬なしコレクションの表示追加 \n- 80年代イベントの音楽追加 \n- 不具合修正と最適化 \n\n楽しいレーシングを！",
         "Music clip": "音楽クリップ",
         "Music volume": "音楽音量",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "亜酸化窒素",
         "NOT ENOUGH STORAGE": "ストレージ不足",
         "Need to update or add to your community?": "コミュニティを更新または追加する必要がありますか？",
+        "No minor updates... Welcome to HUB!": "マイナーアップデートはありません... HUBへようこそ！",
+        "No new releases... checking minor": "新しいリリースはありません... マイナーを確認中",
         "Number of upgrades and fusion parts": "アップグレード数と融合パーツ",
         "OFF": "オフ",
         "ON": "オン",
         "OPEN CONFIGURATOR": "コンフィギュレーターを開く",
         "OTHERS": "その他",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "おっと、インターネット接続が切れたため、一部の車を確保しました。次回またお試しください。",
         "Other": "その他",
         "PRIZE CAR": "賞品車",
         "Petrol or electric car": "ガソリン車または電気自動車",
+        "Please update the details for my community:": "私のコミュニティの詳細を更新してください:",
         "Preparing the city...": "都市を準備中...",
         "Price of full car upgrades": "車両完全アップグレード費用",
         "Price of the car:": "車両価格：",
@@ -112,6 +133,7 @@
         "Restart": "再起動",
         "SEASON CARS": "シーズンカー",
         "SETTINGS": "設定",
+        "SOON": "近日公開",
         "Save": "保存",
         "Secondary campaigns": "サブキャンペーン",
         "Sites": "サイト",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "この車はボスを倒すと入手可能",
         "This car cannot be obtained anywhere": "この車はどこでも入手不可",
         "This car is a part of a collection and can be purchased with collection credits.": "この車はコレクションの一部で、コレクションクレジットで購入可能",
+        "This is downloadable content... Cars will arrive soon, please wait.": "これはダウンロード可能コンテンツです... 車はすぐに到着しますので、お待ちください。",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "こちらがオートショー！全車両の情報が集結！見てみよう",
         "This is the podium, the best cars and drivers show off here": "こちらが表彰台。最高の車とドライバーがここに集結",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "このプロジェクトはゲーム情報を自動化・集約するために作成されました！\n\nアプリのリソースはCSR2およびNaturalMotion => Zynga => Take-Two Interactiveの所有物です。コミュニティ向けの参照情報表示のみを目的としています。",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "CSR2-HUBでの重要なイベントをすべて把握できるようにメッセージ機能を実装しました！\r\n\r\n← 表示するメッセージを選択してください",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "必要な資金が集まり次第、このセクションの機能の積極的な開発を開始します。",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "私たちはコミュニティが蓄積した豊富な知識を誇りに思い、レーシングのベストプラクティスを共有・追跡する場を提供します！",
+        "Welcome to HUB!": "HUBへようこそ！",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "お問い合わせ: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "重要な車をお気に入りに追加可能",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "メーカーや車種グループから車を検索可能。お気に入り機能も！",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "ビジュアルスペックをここで確認",
         "You could have won this car in the following seasons:": "この車は以下のシーズンで獲得可能でした：",
         "Your app version is outdated. An update is required.": "アプリのバージョンが古いです。更新が必要です。",
+        "corrupted archive or not enough space...": "アーカイブが破損しているか、十分な空き容量がありません...",
+        "finished": "完了",
+        "finished - {0} seconds": "完了 - {0} 秒",
+        "finishing release...": "リリースを終了中...",
         "text coming soon...": "近日公開...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2アップデート5.9.0をご紹介！ \n\n新機能: \n- ウェブストアの改善 \n- 実績のためのパーフェクトシフトとローンチトラッキングの追加 \n- 不具合修正と最適化 \n\nダウンロードはLinkerで確認してください。楽しいレーシングを！"
-		}
+        "unpacking...": "解凍中..."
+    }
 }
