--- a/Localisation/PT-BR.json
+++ b/Localisation/PT-BR.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CUIDADO】</color> - TAMANHO DE DOWNLOAD GRANDE",
         "ABOUT": "SOBRE",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infraestrutura e aplicação de build\nNitro4CSR - Gerenciamento de recursos e integração de dados da comunidade\nFREYCKSSON - Atualização de recursos\nTheMaintainers - Criação e atualização de dados da comunidade\n\nE-mail de contato: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "TODOS OS CARROS DEVEM ESTAR NO MÁXIMO ELITE:",
         "ALL CARS SHOULD BE RESTORED:": "TODOS OS CARROS DEVEM SER RESTAURADOS:",
         "AUDIO": "ÁUDIO",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "modo AUTOSHOW <color=#FFD540>PRO</color> (informações técnicas)",
         "Agree": "Concordo",
         "All the best races of the racers are here! Let's see this hall of fame": "Todas as melhores corridas dos pilotos acontecem aqui! Vamos ver este hall da fama.",
+        "Amounts": "Valores",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "Um erro foi detectado. Já estamos cientes do problema e buscando uma solução!",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "Um erro foi detectado. Analisamos o problema e aqui está a solução:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "E, por fim, clique para ver informações adicionais sobre o carro",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "Faça parte da nossa grande comunidade de jogadores e fique por dentro das últimas atualizações do jogo!",
         "Best result and racer. Click to watch the best shift video!": "Melhor resultado e melhor piloto. Clique para assistir ao melhor vídeo de troca!",
         "Boss time: ": "Hora do chefe: ",
+        "Build delta changes...": "Construindo alterações delta...",
         "CAR INFO (from Vision spreadsheet)": "INFO DO CARRO (visão)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "CARROS NA COLEÇÃO: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "COMUNIDADE",
         "CONFIRM CHANGES": "CONFIRMAR ALTERAÇÕES",
         "CONNECTION FAILED": "CONEXÃO FALHA",
         "CREATORS": "CRIADORES",
         "CREDITS": "CRÉDITOS",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – Este jogo de simulador de direção redefine o que você pensava ser possível no seu dispositivo móvel!\n\nEstabelecendo um novo padrão em visuais de jogos de corrida, o CSR2 oferece corridas de arrancada hiper-realistas na palma da sua mão. Compete contra jogadores ao vivo de todo o mundo com os seus supercarros personalizados.",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "Para CSR<color=yellow>2</color>-HUB será necessário baixar os dados: <color= #FFAA0D>{0}</color>, certifique-se de que não está usando internet limitada e confirme o download",
+        "Campaigns": "Campanhas",
         "Car name": "Nome do carro",
+        "Check minor updates...": "Verificando atualizações menores...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Confira o custo de cada parte e os efeitos das sextas partes!",
+        "Check release updates...": "Verificando atualizações de versão...",
         "City camera speed": "Velocidade da câmera da cidade",
         "Click here to change the leaderboard!": "Clique aqui para alterar a tabela de classificação!",
         "Click to change the car type!": "Clique para alterar o tipo de carro!",
         "DATABASE OUTDATED": "BANCO DE DADOS DESATUALIZADO",
         "DONATION": "DOAÇÃO",
         "DYNO:": "DINÂMICO:",
+        "Database liquidation...": "Liquidação de banco de dados...",
         "Do you have your own idea on how to improve the app?": "Você tem uma ideia própria de como melhorar o aplicativo?",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "Não esqueça de indicar a campanha que deseja apoiar\ncaso contrário, o valor será contabilizado para a maior campanha",
+        "Donater": "Doador",
         "Download failed, check your internet connection and restart the app": "O download falhou, verifique sua conexão com a internet e reinicie o aplicativo",
         "Driver": "Motorista",
         "ELITE MAX": "ELITE MÁXIMA",
@@ -58,23 +66,31 @@
         "FAVORITEs": "FAVORITOS",
         "FINAL DRIVE": "DISPOSIÇÃO FINAL",
         "FPS limiter": "Limitador de FPS",
+        "Failed download, check internet connection and restart app": "Download falhou, verifique sua conexão com a internet e reinicie o aplicativo",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finalmente podemos ver os jogadores mais rápidos e seus carros. Venha comigo, eu te mostro!",
         "Find out how many elite components you need to fully upgrade your car!": "Descubra quantos componentes de elite você precisa para atualizar completamente seu carro!",
+        "Finishing...": "Finalizando...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "Para o funcionamento estável do aplicativo, recomenda-se ter pelo menos 5 GB de armazenamento livre no seu dispositivo. Libere espaço e tente novamente.",
         "GRAPHICS": "GRÁFICOS",
         "Gacha imports": "Importações de Gacha",
         "Get update!": "Obter atualização!",
         "Get updated information on how many Legends components you need to restore your car!": "Obtenha informações atualizadas sobre quantos componentes Legends você precisa para restaurar seu carro!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "Obtendo versão {0}...",
+        "Getting releases data...": "Obtendo dados de versões...",
+        "Getting updates {0}...": "Obtendo atualizações {0}...",
         "Graphics quality": "Qualidade gráfica",
+        "I have an idea to improve your app:": "Tenho uma ideia para melhorar seu aplicativo:",
         "I know it already": "Eu já sei",
         "INBOX": "MENSAGENS",
         "Ignore": "Ignorar",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "Num mundo onde os centésimos de segundo marcam a diferença entre os profissionais e as lendas, torne-se o piloto #1 da cena.\n\nAcenda suas fantasias de corrida e experimente a emoção de empurrar aos limites seus veículos de alta performance favoritos.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again",
+        "Initialization...": "Inicializando...",
         "Initializing database...": "Inicializando o banco de dados...",
+        "LET'S GO": "VAMOS LÁ",
         "LINKER": "CONECTOR",
         "LOADING SCREEN": "TELA DE CARREGAMENTO",
+        "Leaderboard": "Leaderboard",
         "Let's choose the unrestored version": "Vamos escolher a versão não restaurada",
         "Let's go!": "Vamos lá!",
         "Let's look at ELITES": "Vamos ver os ELITES",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "Vamos tornar o aplicativo ainda mais legal juntos!",
         "MILESTONE SEASON CAR": "CARRO MARCANTE DA TEMPORADA",
         "Main campaigns": "Campanhas principais",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Conheça a atualização do CSR2 5.9.0! \n\nNovidades: \n- Melhorias na loja virtual \n- Rastreamento de arrancada e câmbio perfeitos para conquistas \n- Correções e otimização \n\nVerifique o Linker para download. Boas corridas!",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Conheça a atualização do hub 1.1.4! \nNovidades: \n- Novo recurso MENSAGENS \n- Exibição de coleções sem prêmio \n- Música do evento anos 80 adicionada \n- Correções e otimização \n\nBoas corridas!",
         "Music clip": "Clipe de música",
         "Music volume": "Volume da música",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "ÓXIDO NITROSO",
         "NOT ENOUGH STORAGE": "ARMAZENAMENTO INSUFICIENTE",
         "Need to update or add to your community?": "Precisa atualizar ou adicionar algo à sua comunidade?",
+        "No minor updates... Welcome to HUB!": "Nenhuma atualização menor... Bem-vindo ao HUB!",
+        "No new releases... checking minor": "Nenhuma nova versão... verificando atualizações menores",
         "Number of upgrades and fusion parts": "Número de atualizações e peças de fusão",
         "OFF": "DESLIGADO",
         "ON": "LIGADO",
         "OPEN CONFIGURATOR": "ABRIR CONFIGURADOR",
         "OTHERS": "OUTROS",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "Opa, você perdeu a conexão com a internet e interceptamos alguns carros. Tente novamente na próxima vez.",
         "Other": "Outros",
         "PRIZE CAR": "CARRO PRÊMIO",
         "Petrol or electric car": "Carro a gasolina ou elétrico",
+        "Please update the details for my community:": "Por favor, atualize os detalhes da minha comunidade:",
         "Preparing the city...": "Preparando a cidade...",
         "Price of full car upgrades": "Preço das atualizações completas do carro",
         "Price of the car:": "Preço do carro:",
@@ -112,6 +133,7 @@
         "Restart": "Reiniciar",
         "SEASON CARS": "CARROS DA TEMPORADA",
         "SETTINGS": "CONFIGURAÇÕES",
+        "SOON": "EM BREVE",
         "Save": "Salvar",
         "Secondary campaigns": "Campanhas secundárias",
         "Sites": "Sites",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "Este carro pode ser obtido derrotando o chefe",
         "This car cannot be obtained anywhere": "Este carro não pode ser obtido em lugar nenhum",
         "This car is a part of a collection and can be purchased with collection credits.": "Este carro faz parte de uma coleção e pode ser comprado com créditos de coleção.",
+        "This is downloadable content... Cars will arrive soon, please wait.": "Este é conteúdo para download... Os carros chegarão em breve, por favor aguarde.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Este é o AUTOSHOW - informações sobre todos os carros estão reunidas aqui! Vamos ver",
         "This is the podium, the best cars and drivers show off here": "Este é o pódio, os melhores carros e pilotos se apresentam aqui",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Este projeto foi criado para automatizar e reunir as informações necessárias para o jogo em um só lugar!\n\nQuase todos os recursos do aplicativo pertencem ao jogo CSR2 e são propriedades da NaturalMotion => Zynga => Take-Two Interactive. Os recursos utilizados servem apenas para exibir informações de referência para a comunidade e nada mais.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "Implementamos MENSAGENS para que você fique por dentro de todos os eventos importantes no CSR2-HUB!\r\n\r\n← Selecione uma mensagem para visualizar.",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "Começaremos o desenvolvimento ativo da função desta seção após a arrecadação dos fundos necessários.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "Estamos orgulhosos da riqueza de conhecimento que nossa comunidade acumulou e oferecemos espaços para compartilhar e acompanhar as melhores práticas de corrida!",
+        "Welcome to HUB!": "Bem-vindo ao HUB!",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "Escreva para nós: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "Você pode adicionar carros importantes aos favoritos",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Você pode encontrar o carro que precisa por fabricantes ou grupos de carros. Há até uma seção de favoritos!",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "Você pode ver as especificações visuais aqui",
         "You could have won this car in the following seasons:": "Este carro poderia ter ganhado o campeonato de equipes. Nas seguintes temporadas:",
         "Your app version is outdated. An update is required.": "Sua versão do aplicativo está desatualizada. Uma atualização é necessária.",
+        "corrupted archive or not enough space...": "arquivo corrompido ou espaço insuficiente...",
+        "finished": "finalizado",
+        "finished - {0} seconds": "finalizado - {0} segundos",
+        "finishing release...": "finalizando versão...",
         "text coming soon...": "texto em breve...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Conheça a atualização do CSR2 5.9.0! \n\nNovidades: \n- Melhorias na loja virtual \n- Rastreamento de arrancada e câmbio perfeitos para conquistas \n- Correções e otimização \n\nVerifique o Linker para download. Boas corridas!"
-		}
+        "unpacking...": "descompactando..."
+    }
 }
