--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ОСТОРОЖНО】</color> -    ПОТОКОВАЯ ЗАГРУЗКА",
         "ABOUT": "О ПРОЕКТЕ",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABSOLUTE - Разработка приложения и его инфраструктуры\nNitro4CSR - Управление ресурсами и интеграция данных комьюнити\nFREYCKSSON - Обновление ресурсов\nMAINTAINERS - Создание и обновление данных комьюнити\n\nИздатель: ムRimgine Entertainment\n\nПо всем вопросам: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Инфраструктура и сборка приложения\nNitro4CSR - Управление ресурсами и интеграция данных сообщества\nFREYCKSSON - Обновление некоторых ресурсов\nTheMaintainers - Создание и обновление данных сообщества\n\nКонтактная почта: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "ВСЕ МАШИНЫ ДОЛЖНЫ БЫТЬ ПРОКАЧЕНЫ В ЭЛИТ:",
         "ALL CARS SHOULD BE RESTORED:": "ВСЕ МАШИНЫ ДОЛЖНЫ БЫТЬ ВОССТАНОВЛЕНЫ:",
         "AUDIO": "АУДИО",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Автошоу <color=#FFD540>ПРО</color> режим  (тех. инфо)",
         "Agree": "Принять",
         "All the best races of the racers are here! Let's see this hall of fame": "Все лучшие результаты гонщиков находятся здесь! Давай посмотрим на этот зал славы",
+        "Amounts": "Сумма",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "Обнаружена ошибка. Мы уже знаем о проблеме и работаем над её решением!",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "Обнаружена ошибка. Мы проанализировали проблему, и вот как её исправить:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "Нажми сюда, чтобы увидеть дополнительную информацию об автомобиле",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "Станьте частью нашего большого игрового сообщества и будьте в курсе последних обновлений игры!",
         "Best result and racer. Click to watch the best shift video!": "Лучший гонщик и результат. Нажми, чтобы посмотреть шифт-видео!",
         "Boss time: ": "Время босса: ",
+        "Build delta changes...": "Построение дельта-изменений...",
         "CAR INFO (from Vision spreadsheet)": "ИСТОРИЯ АВТОМОБИЛЯ (vision)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "МАШИН В КОЛЛЕКЦИИ: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "СООБЩЕСТВО",
         "CONFIRM CHANGES": "ПОДТВЕРДИТЬ ИЗМЕНЕНИЯ",
         "CONNECTION FAILED": "ОШИБКА СОЕДИНЕНИЯ",
         "CREATORS": "СОЗДАТЕЛИ",
         "CREDITS": "ИНФО",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – Эта игра переопределяет то, что вы считали возможным на вашем мобильном устройстве!\n\nУстанавливая новый стандарт визуализации в гоночных играх, CSR2 предоставляет гиперреалистичный дрэг-рейсинг! Соревнуйтесь с живыми игроками по всему миру на своих корытах ;)",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB необходимо будет загрузить дополнительные данные: <color= #FFAA0D>{0}</color>. Убедитесь в том, что вы подключены к правильной сети - и начните загрузку",
+        "Campaigns": "Кампании",
         "Car name": "Имя автомобиля",
+        "Check minor updates...": "Проверка мелких обновлений...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Ознакомьтесь со стоимостью каждой части, а также с эффективностью шестых деталей!",
+        "Check release updates...": "Проверка крупных обновлений...",
         "City camera speed": "Чувствительность камеры",
         "Click here to change the leaderboard!": "Нажми здесь, чтобы сменить таблицу лидеров!",
         "Click to change the car type!": "Нажми здесь, чтобы изменить состояние автомобиля!",
         "DATABASE OUTDATED": "БАЗА ДАННЫХ УСТАРЕЛА",
         "DONATION": "ПОДДЕРЖКА",
         "DYNO:": "ДИНО:",
+        "Database liquidation...": "Ликвидация базы данных...",
         "Do you have your own idea on how to improve the app?": "У вас есть свои идеи по улучшению приложения?",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "Не забудьте указать кампанию для поддержки\nиначе средства будут зачислены на крупнейшую кампанию",
+        "Donater": "Донатер",
         "Download failed, check your internet connection and restart the app": "Ошибка загрузки, проверьте подключение к интеренету и перезапустите приложение",
         "Driver": "Гонщик",
         "ELITE MAX": "ЭЛИТ МАКС",
@@ -58,23 +66,31 @@
         "FAVORITEs": "ИЗБРАННЫЕ",
         "FINAL DRIVE": "КОНЕЧНАЯ ПЕРЕДАЧА",
         "FPS limiter": "Ограничитель FPS",
+        "Failed download, check internet connection and restart app": "Ошибка загрузки, проверьте подключение к интернету и перезапустите приложение",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Наконец-то мы можем увидеть самых быстрых игроков и их машины. Пойдем посмотрим МИРОВЫЕ РЕКОРДЫ!",
         "Find out how many elite components you need to fully upgrade your car!": "Узнайте, сколько элитных компонентов вам понадобится для полной прокачки вашего автомобиля!",
+        "Finishing...": "Завершение...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "Для стабильной работы приложения рекомендуется иметь не менее 5 ГБ свободного места на устройстве. Освободите место и повторите попытку.",
         "GRAPHICS": "ГРАФИКА",
         "Gacha imports": "Импортные детали",
         "Get update!": "ОБНОВИТЬ!",
         "Get updated information on how many Legends components you need to restore your car!": "Узнайте сколько компонентов Legends вам понадобится для восстановления вашего автомобиля!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "Получение релиза {0}...",
+        "Getting releases data...": "Получение данных о недавних крупных релизах...",
+        "Getting updates {0}...": "Получение обновлений {0}...",
         "Graphics quality": "Качество графики",
+        "I have an idea to improve your app:": "У меня есть идея по улучшению вашего приложения:",
         "I know it already": "Я уже знаю",
         "INBOX": "СООБЩЕНИЯ",
         "Ignore": "Игнорировать",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "В мире, где сотые доли секунды отделяют профессионалов от легенд, станьте лучшим гонщиком на сцене.\n\nЗажгите свои гоночные фантазии и испытайте свои любимые автомобили.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Для работы приложения необходимо загрузить дополнительные данные, проверьте свое подключение к интернету и повторите попытку",
+        "Initialization...": "Инициализация...",
         "Initializing database...": "Инициализация базы данных...",
+        "LET'S GO": "ПОГНАЛИ",
         "LINKER": "ЛИНКЕР",
         "LOADING SCREEN": "ЗАГРУЗОЧНЫЙ ЭКРАН",
+        "Leaderboard": "Топ донатов",
         "Let's choose the unrestored version": "Давай выберем невосстановленный автомобиль",
         "Let's go!": "Погнали!",
         "Let's look at ELITES": "Давай глянем ELITES",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "Давайте вместе сделаем приложение еще круче!",
         "MILESTONE SEASON CAR": "СЕЗОННАЯ МАШИНА",
         "Main campaigns": "Основные кампании",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Встречайте обновление CSR2 5.9.0! \n\nЧто нового: \n- Улучшения веб-магазина \n- Добавлено отслеживание идеального старта и переключения передач для достижений \n- Исправление ошибок и оптимизация \n\nПроверьте Linker для загрузки. Удачных гонок!",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Встречайте обновление хаба 1.1.4! \nЧто нового: \n- Новая функция СООБЩЕНИЯ \n- Отображение коллекций без приза \n- Добавлена музыка с события 80-х \n- Исправление ошибок и оптимизация \n\nУдачных гонок!",
         "Music clip": "Музыка",
         "Music volume": "Громкость музыки",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "ЗАКИСЬ АЗОТА",
         "NOT ENOUGH STORAGE": "НЕДОСТАТОЧНО МЕСТА",
         "Need to update or add to your community?": "Нужно обновить или добавить ваше сообщество?",
+        "No minor updates... Welcome to HUB!": "Нет мелких обновлений... Добро пожаловать!",
+        "No new releases... checking minor": "Нет новых релизов... проверка мелких обновлений",
         "Number of upgrades and fusion parts": "Кол-во максимальных улучшений и встроенных деталей",
         "OFF": "ВЫКЛ",
         "ON": "ВКЛ",
         "OPEN CONFIGURATOR": "ОТКРЫТЬ КОНФИГУРАТОР",
         "OTHERS": "ДРУГОЕ",
         "Ok": "Oк",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "Ой-ой, соединение с интернетом было потеряно, и мы перехватили некоторые машины. Попробуй в следующий раз.",
         "Other": "Другое",
         "PRIZE CAR": "ПРИЗОВОЙ АВТОМОБИЛЬ",
         "Petrol or electric car": "ДВС или электрокар",
+        "Please update the details for my community:": "Пожалуйста, обновите данные для моего сообщества:",
         "Preparing the city...": "Подготовка города...",
         "Price of full car upgrades": "Стоимость полной прокачки автомобиля",
         "Price of the car:": "Стоимость автомобиля:",
@@ -112,6 +133,7 @@
         "Restart": "Перезапуск",
         "SEASON CARS": "СЕЗОННЫЕ АВТОМОБИЛИ",
         "SETTINGS": "НАСТРОЙКИ",
+        "SOON": "СКОРО",
         "Save": "Сохранить",
         "Secondary campaigns": "Дополнительные кампании",
         "Sites": "Сайты",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "Чтобы получить эту машину нужно победить босса",
         "This car cannot be obtained anywhere": "Эту машину нельзя получить",
         "This car is a part of a collection and can be purchased with collection credits.": "Этот автомобиль является частью коллекции и может быть приобретен за кредиты коллекций",
+        "This is downloadable content... Cars will arrive soon, please wait.": "Это загружаемый контент... Машины уже в пути!",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Это автошоу - здесь собрана информация обо всех автомобилях! Давай посмотрим",
         "This is the podium, the best cars and drivers show off here": "Это подиум, здесь красуются самые быстрые автомобили и гонщики",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Данный проект создан для автоматизации и визуализации необходимой для игры информации в одном месте!\r\n\r\nПрактически все ресурсы приложения принадлежат игре CSR2 и являются собственностью NaturalMotion => Zynga => Take-Two Interactive. Ресурсы используются только для отображения справочной информации для игрового сообщества и не более того.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "Мы внедрили раздел СООБЩЕНИЯ, чтобы вы были в курсе всех важных событий в CSR2-HUB!\r\n\r\n← Выберите сообщение для просмотра.",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "Мы начнем активную разработку функции из этого раздела после сбора необходимых средств для нее.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "Мы гордимся богатством знаний, накопленных нашим сообществом, и предлагаем места для обмена и отслеживания лучших гоночных практик!",
+        "Welcome to HUB!": "Добро пожаловать в ХАБ!",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "Напишите нам: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "Можно добавлять важные автомобили в избранное",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Можно найти нужную машину по производителю или группам автомобилей. Есть даже раздел избранного!",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "Визуальные хар-ки можно посмотреть здесь",
         "You could have won this car in the following seasons:": "Эта призовая машина чемпионата команд. За следующие сезоны:",
         "Your app version is outdated. An update is required.": "Ваша версия приложения устарела. Требуется обновление.",
+        "corrupted archive or not enough space...": "архив был поврежден или у вас недостаточно места...",
+        "finished": "завершено",
+        "finished - {0} seconds": "завершено - за {0} секунд",
+        "finishing release...": "завершение обработки релиза...",
         "text coming soon...": "текст в разработке...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Встречайте обновление CSR2 5.9.0! \n\nЧто нового: \n- Улучшения веб-магазина \n- Добавлено отслеживание идеального старта и переключения передач для достижений \n- Исправление ошибок и оптимизация \n\nПроверьте Linker для загрузки. Удачных гонок!"
-		}
+        "unpacking...": "распаковка..."
+    }
 }
