--- a/Localisation/ZH-TW.json
+++ b/Localisation/ZH-TW.json
@@ -9,14 +9,15 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下載量大",
         "ABOUT": "關于",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - 基礎設施和構建應用程式\nNitro4CSR - 資源管理和社群資料整合\nFREYCKSSON - 資源更新\nTheMaintainers - 建立和更新社群資料\n\n聯絡信箱: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "所有車輛應達到精英滿級:",
         "ALL CARS SHOULD BE RESTORED:": "所有車輛應被修復:",
         "AUDIO": "音響",
         "AUTOSHOW": "車展",
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "車展 <color=#FFD540>PRO</color> 模式  (technical info)",
-        "Agree": "Agree",
+        "Agree": "同意",
         "All the best races of the racers are here! Let's see this hall of fame": "車手們的最佳賽事都在這裏! 讓我們看看這個名人堂",
+        "Amounts": "金額",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "偵測到錯誤，我們已意識到該問題並正在尋找解決方案！",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "偵測到錯誤，我們已分析問題並為您提供解決方案：\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "最後，點擊查看車輛的額外資訊",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "加入我們龐大的遊戲社群，隨時掌握最新遊戲更新！",
         "Best result and racer. Click to watch the best shift video!": "最佳成績與車手。點擊觀看最佳換擋的視頻!",
         "Boss time: ": "領袖時間: ",
+        "Build delta changes...": "構建增量變更中...",
         "CAR INFO (from Vision spreadsheet)": "車輛資訊 (自  Vision 資料庫)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "收藏中的車輛: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "社群",
         "CONFIRM CHANGES": "確認更改",
         "CONNECTION FAILED": "連綫失敗",
         "CREATORS": "創建者",
         "CREDITS": "特別鳴謝",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – 這款駕駛模擬遊戲重新定義了您對行動裝置可能性的認知！\n\nCSR2為賽車遊戲畫質設立了新標準，將超真實的直線加速賽帶到您的掌中。與全球真實玩家競賽，使用您定制打造的超級跑車。",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB 需要下載數據: <color= #FFAA0D>{0}</color>，請確認不是使用受限網絡后確認下載程序",
+        "Campaigns": "活動",
         "Car name": "車名",
+        "Check minor updates...": "檢查次要更新中...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "檢查各個零件的價格，以及第六級升級的作用!",
+        "Check release updates...": "檢查版本更新中...",
         "City camera speed": "城市攝像機的速度",
         "Click here to change the leaderboard!": "點擊這裏更換排行榜!",
         "Click to change the car type!": "點擊更換車種!",
         "DATABASE OUTDATED": "資料庫已過期",
         "DONATION": "捐贈",
         "DYNO:": "測功機:",
+        "Database liquidation...": "資料庫清理中...",
         "Do you have your own idea on how to improve the app?": "您有改進應用程式的想法嗎？",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "請務必註明要支援的眾籌活動\n否則資金將計入最大型的活動",
+        "Donater": "捐贈者",
         "Download failed, check your internet connection and restart the app": "下載失敗，檢查網絡連接后重啓應用",
         "Driver": "車手",
         "ELITE MAX": "精英滿級",
@@ -54,27 +62,35 @@
         "ERROR DETECTED": "偵測到錯誤",
         "EXIT": "離開",
         "Effects volume": "音效聲量",
-        "Enable localisation": "Enable localisation",
+        "Enable localisation": "啟用本地化",
         "FAVORITEs": "最愛",
         "FINAL DRIVE": "最終傳動",
-        "FPS limiter": "FPS limiter",
+        "FPS limiter": "FPS限制器",
+        "Failed download, check internet connection and restart app": "下載失敗，請檢查網路連線並重啟應用程式",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "我們終於可以查看最快玩家和他們的車輛。跟我來，我給你看看!",
         "Find out how many elite components you need to fully upgrade your car!": "查看升滿車輛需要多少精英元件!",
+        "Finishing...": "最終處理中...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "為確保應用程式穩定運行，建議您的裝置上至少有 5 GB 的可用儲存空間。請清理空間後重試。",
-        "GRAPHICS": "GRAPHICS",
+        "GRAPHICS": "圖形",
         "Gacha imports": "抽獎進口",
         "Get update!": "獲取更新!",
         "Get updated information on how many Legends components you need to restore your car!": "獲取和修復傳奇車輛所需的元件數量有關的最新消息!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
-        "Graphics quality": "Graphics quality",
+        "Getting release {0}...": "正在取得 {0} 版本...",
+        "Getting releases data...": "取得版本資料中...",
+        "Getting updates {0}...": "正在取得 {0} 更新...",
+        "Graphics quality": "圖形品質",
+        "I have an idea to improve your app:": "我有個改進您應用程式的想法：",
         "I know it already": "我已知曉",
         "INBOX": "訊息",
         "Ignore": "忽略",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "在這百分之一秒決定職業選手與傳奇的世界裡，成為賽場上的頭號車手。\n\n點燃您的賽車幻想，體驗將愛車性能推向極限的快感。",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "爲了確保正確運行需下載額外數據，請檢查網絡連接后重試",
+        "Initialization...": "初始化中...",
         "Initializing database...": "正在初始化數據庫...",
+        "LET'S GO": "開始",
         "LINKER": "連結工具",
         "LOADING SCREEN": "加載屏幕",
+        "Leaderboard": "排行榜",
         "Let's choose the unrestored version": "我們來選擇未修復的版本",
         "Let's go!": "我們出發!",
         "Let's look at ELITES": "讓我們看看精英車輛",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "讓我們攜手讓應用程式變得更出色！",
         "MILESTONE SEASON CAR": "賽季里程碑車輛",
         "Main campaigns": "主要眾籌活動",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "迎接CSR2更新5.9.0！ \n\n新內容： \n- 網頁商店改進 \n- 新增完美換擋和起步成就追蹤 \n- 錯誤修正和優化 \n\n請查看Linker以下載。祝您競速愉快！",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "迎接中心更新1.1.4！ \n新內容： \n- 新訊息功能 \n- 新增無獎勵收藏品顯示 \n- 添加80年代活動音樂 \n- 錯誤修正和優化 \n\n祝您競速愉快！",
         "Music clip": "音樂曲子",
         "Music volume": "音樂聲量",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "氮氣加速",
         "NOT ENOUGH STORAGE": "儲存空間不足",
         "Need to update or add to your community?": "需要更新或新增您的社群內容嗎？",
+        "No minor updates... Welcome to HUB!": "無次要更新... 歡迎來到 HUB！",
+        "No new releases... checking minor": "無新版本發布... 檢查次要更新中",
         "Number of upgrades and fusion parts": "升級及合成零件的數量",
         "OFF": "關閉",
         "ON": "開啓",
         "OPEN CONFIGURATOR": "開啓配置器",
         "OTHERS": "其他",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "哎呀，網路連線中斷，我們攔截了部分車輛。請下次再試。",
         "Other": "其他",
         "PRIZE CAR": "獎品車",
         "Petrol or electric car": "汽油或電動車",
+        "Please update the details for my community:": "請更新我的社群資料：",
         "Preparing the city...": "正在准備城市中...",
         "Price of full car upgrades": "滿級的價格",
         "Price of the car:": "車輛的價格:",
@@ -112,6 +133,7 @@
         "Restart": "重啓",
         "SEASON CARS": "賽季車輛",
         "SETTINGS": "設置",
+        "SOON": "即將到來",
         "Save": "保存",
         "Secondary campaigns": "次要眾籌活動",
         "Sites": "網站",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "這輛車可通過擊敗領袖獲取",
         "This car cannot be obtained anywhere": "這輛車無法獲取",
         "This car is a part of a collection and can be purchased with collection credits.": "這輛車屬於某個收藏的一部分，且可透過收藏積分購買",
+        "This is downloadable content... Cars will arrive soon, please wait.": "這是可下載內容... 車輛即將抵達，請稍候",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "這是個車展 - 這裏收著所有車輛的資訊！ 我們來看看",
         "This is the podium, the best cars and drivers show off here": "這裏是頒獎臺，最佳的車輛和車手都展示在這裏",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "這個計劃是爲了自動化和整頓整個游戲的必要資訊到一個集中點開發的!\n\n幾乎所有應用的資源皆爲 CSR2 所屬，且是 NaturalMotion => Zynga => Take-Two Interactive 的財產。 所使用的資源只用於給社群提供參考資訊，無其他用途",
@@ -136,7 +159,7 @@
         "UPGRADE DETAILED INFO": "升級詳細資訊",
         "Updating the database...": "正在更新數據庫...",
         "VIEWED": "已檢視",
-        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
+        "Very Low|Low|Medium|High|Very High|Ultra": "非常低|低|中|高|非常高|超高",
         "WELCOME TO INBOX": "歡迎來到訊息",
         "WELCOME!": "WELCOME!",
         "WORLD RECORDS": "世界紀錄",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "我們已實現訊息功能，讓您及時掌握CSR2-HUB中的所有重要事件！\r\n\r\n← 選擇一則訊息以進行檢視",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "在籌集到必要資金後，我們將開始積極開發本區塊的功能。",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "我們為社群累積的豐富知識感到自豪，並提供分享和追蹤賽車最佳實踐的平台！",
+        "Welcome to HUB!": "歡迎來到 HUB！",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "聯絡我們：<b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "你可以把重要的車輛加入最愛裏",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "你可以區分廠家或車種查尋車輛。甚至還有最愛的選項！",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "你可以在這裏查看外觀規格",
         "You could have won this car in the following seasons:": "這輛車可以在以下賽季裏贏取:",
         "Your app version is outdated. An update is required.": "您的應用程式版本已過期，需要更新。",
+        "corrupted archive or not enough space...": "存檔損毀或空間不足...",
+        "finished": "已完成",
+        "finished - {0} seconds": "完成 - {0} 秒",
+        "finishing release...": "完成版本發布中...",
         "text coming soon...": "即將來臨...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "迎接CSR2更新5.9.0！ \n\n新內容： \n- 網頁商店改進 \n- 新增完美換擋和起步成就追蹤 \n- 錯誤修正和優化 \n\n請查看Linker以下載。祝您競速愉快！"
-		}
+        "unpacking...": "解壓縮中..."
+    }
 }
