--- a/Localisation/ZH.json
+++ b/Localisation/ZH.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下载量大",
         "ABOUT": "关于",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - 基础设施和构建应用程序\nNitro4CSR - 资源管理和社区数据集成\nFREYCKSSON - 资源更新\nTheMaintainers - 创建和更新社区数据\n\n联系邮箱: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "所有车辆应达到精英满级:",
         "ALL CARS SHOULD BE RESTORED:": "所有车辆应被修复:",
         "AUDIO": "音响",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "车展 <color=#FFD540>PRO</color> 模式  (technical info)",
         "Agree": "Agree",
         "All the best races of the racers are here! Let's see this hall of fame": "车手们的最佳赛事都在这里! 让我们看看这个名人堂",
+        "Amounts": "金额",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "检测到错误，我们已意识到该问题并正在寻找解决方案！",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "检测到错误，我们已分析问题并为您提供解决方案：\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "最后，点击查看车辆的额外资讯",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "加入我们庞大的游戏社区，随时了解最新游戏更新！",
         "Best result and racer. Click to watch the best shift video!": "最佳成绩与车手。点击观看最佳换挡的视频!",
         "Boss time: ": "领袖时间: ",
+        "Build delta changes...": "构建增量更改...",
         "CAR INFO (from Vision spreadsheet)": "车辆资讯 (自 Vision 资料库)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "收藏中的车辆: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "社区",
         "CONFIRM CHANGES": "确认更改",
         "CONNECTION FAILED": "连线失败",
         "CREATORS": "创建者",
         "CREDITS": "特别鸣谢",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – 这款驾驶模拟游戏重新定义了您对移动设备可能性的认知！\n\nCSR2为赛车游戏画面设立了新标准，将超真实的直线加速赛带到您的掌中。与全球真人玩家竞技，使用您定制打造的超级跑车。",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB 需要下载数据: <color= #FFAA0D>{0}</color>, 请确认不是使用受限网络后确认下载程序",
+        "Campaigns": "活动",
         "Car name": "车名",
+        "Check minor updates...": "检查次要更新...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "检查各个零件的价格，以及第六级升级的作用！",
+        "Check release updates...": "检查版本更新...",
         "City camera speed": "城市摄像机的速度",
         "Click here to change the leaderboard!": "点击这里更换排行榜！",
         "Click to change the car type!": "点击更换车种！",
         "DATABASE OUTDATED": "数据库已过期",
         "DONATION": "捐赠",
         "DYNO:": "测功机:",
+        "Database liquidation...": "数据库清理...",
         "Do you have your own idea on how to improve the app?": "您有改进应用程序的想法吗？",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "请务必注明要支持的众筹活动\n否则资金将计入最大型的活动",
+        "Donater": "捐赠者",
         "Download failed, check your internet connection and restart the app": "下载失败，检查网络连接后重启应用",
         "Driver": "车手",
         "ELITE MAX": "精英满级",
@@ -54,27 +62,35 @@
         "ERROR DETECTED": "检测到错误",
         "EXIT": "离开",
         "Effects volume": "音效声量",
-        "Enable localisation": "Enable localisation",
+        "Enable localisation": "启用本地化",
         "FAVORITEs": "最爱",
         "FINAL DRIVE": "最终传动",
         "FPS limiter": "FPS limiter",
+        "Failed download, check internet connection and restart app": "下载失败，请检查网络连接并重启应用",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "我们终于可以查看最快玩家和他们的车辆。跟我来，我给你看看!",
         "Find out how many elite components you need to fully upgrade your car!": "查看升满车辆需要多少精英元件!",
+        "Finishing...": "正在完成...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "为确保应用程序稳定运行，建议您的设备上至少有 5 GB 的可用存储空间。请清理空间后重试。",
-        "GRAPHICS": "GRAPHICS",
+        "GRAPHICS": "图形",
         "Gacha imports": "抽奖进口",
         "Get update!": "获取更新！",
         "Get updated information on how many Legends components you need to restore your car!": "获取和修复传奇车辆所需的元件数量有关的最新消息!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
-        "Graphics quality": "Graphics quality",
+        "Getting release {0}...": "正在获取版本 {0}...",
+        "Getting releases data...": "正在获取版本数据...",
+        "Getting updates {0}...": "正在获取更新 {0}...",
+        "Graphics quality": "图形质量",
+        "I have an idea to improve your app:": "我有一个改进您应用的创意：",
         "I know it already": "我已知晓",
         "INBOX": "消息",
         "Ignore": "忽略",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "在这个百分之一秒决定职业选手与传奇的世界里，成为赛道上的头号车手。\n\n点燃您的竞速幻想，体验将爱车性能推向极限的快感。",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "为了确保正确运行需下载额外数据，请检查网络连接后重试",
+        "Initialization...": "初始化中...",
         "Initializing database...": "正在初始化数据库...",
+        "LET'S GO": "开始",
         "LINKER": "链接工具",
         "LOADING SCREEN": "加载屏幕",
+        "Leaderboard": "排行榜",
         "Let's choose the unrestored version": "我们来选择未修复的版本",
         "Let's go!": "我们出发!",
         "Let's look at ELITES": "让我们看看精英车辆",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "让我们携手让应用程序变得更棒！",
         "MILESTONE SEASON CAR": "赛季里程碑车辆",
         "Main campaigns": "主要众筹活动",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "迎接CSR2更新5.9.0！ \n\n新内容： \n- 网页商店改进 \n- 新增完美换挡和起步成就追踪 \n- 错误修复和优化 \n\n请查看Linker以下载。祝您竞速愉快！",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "迎接中心更新1.1.4！ \n新内容： \n- 新消息功能 \n- 新增无奖励藏品显示 \n- 添加80年代活动音乐 \n- 错误修复和优化 \n\n祝您竞速愉快！",
         "Music clip": "音乐曲子",
         "Music volume": "音乐声量",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "氮气加速",
         "NOT ENOUGH STORAGE": "存储空间不足",
         "Need to update or add to your community?": "需要更新或添加您的社区内容？",
+        "No minor updates... Welcome to HUB!": "无次要更新... 欢迎来到HUB！",
+        "No new releases... checking minor": "无新版本发布... 正在检查次要更新",
         "Number of upgrades and fusion parts": "升级及合成零件的数量",
         "OFF": "关闭",
         "ON": "开启",
         "OPEN CONFIGURATOR": "开启配置器",
         "OTHERS": "其他",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "哎呀，网络连接中断，我们拦截了部分车辆。请下次再试。",
         "Other": "其他",
         "PRIZE CAR": "奖品车",
         "Petrol or electric car": "汽油或电动车",
+        "Please update the details for my community:": "请更新我的社区信息：",
         "Preparing the city...": "正在准备城市中...",
         "Price of full car upgrades": "满级的价格",
         "Price of the car:": "车辆的价格:",
@@ -112,6 +133,7 @@
         "Restart": "重启",
         "SEASON CARS": "赛季车辆",
         "SETTINGS": "设置",
+        "SOON": "即将到来",
         "Save": "保存",
         "Secondary campaigns": "次要众筹活动",
         "Sites": "网站",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "这辆车可通过击败领袖获取",
         "This car cannot be obtained anywhere": "这辆车无法获取",
         "This car is a part of a collection and can be purchased with collection credits.": "这辆车属于某个收藏的一部分，且可透过收藏积分购买",
+        "This is downloadable content... Cars will arrive soon, please wait.": "这是可下载内容... 车辆即将抵达，请稍候",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "这是个车展 - 这里收着所有车辆的资讯! 我们来看看",
         "This is the podium, the best cars and drivers show off here": "这里是颁奖台，最佳的车辆和车手都展示在这里",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "这个计划是为了自动化和整顿整个游戏的必要资讯到一个集中点开发的!\n\n几乎所有应用的资源皆为 CSR2 所属，且是 NaturalMotion => Zynga => Take-Two Interactive 的财产。所使用的资源只用于给社群提供参考资讯，无其他用途。",
@@ -136,7 +159,7 @@
         "UPGRADE DETAILED INFO": "升级详细资讯",
         "Updating the database...": "正在更新数据库...",
         "VIEWED": "已查看",
-        "Very Low|Low|Medium|High|Very High|Ultra": "Very Low|Low|Medium|High|Very High|Ultra",
+        "Very Low|Low|Medium|High|Very High|Ultra": "非常低|低|中|高|非常高|超高",
         "WELCOME TO INBOX": "欢迎来到消息",
         "WELCOME!": "WELCOME!",
         "WORLD RECORDS": "世界纪录",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "我们已实现消息功能，让您及时了解CSR2-HUB中的所有重要事件！\r\n\r\n← 选择一条消息进行查看",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "在筹集到必要资金后，我们将开始积极开发本版块的功能。",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "我们为社区积累的丰富知识感到自豪，并提供分享和关注赛车最佳实践的平台！",
+        "Welcome to HUB!": "欢迎来到HUB！",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "联系我们：<b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "你可以把重要的车辆加入最爱里",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "你可以区分厂家或车种查寻车辆。甚至还有最爱的选项!",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "你可以在这里查看外观规格",
         "You could have won this car in the following seasons:": "这辆车可以在以下赛季里赢取:",
         "Your app version is outdated. An update is required.": "您的应用版本已过期，需要更新。",
+        "corrupted archive or not enough space...": "存档损坏或存储空间不足...",
+        "finished": "已完成",
+        "finished - {0} seconds": "完成 - {0} 秒",
+        "finishing release...": "正在完成版本发布...",
         "text coming soon...": "即将来临...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "迎接CSR2更新5.9.0！ \n\n新内容： \n- 网页商店改进 \n- 新增完美换挡和起步成就追踪 \n- 错误修复和优化 \n\n请查看Linker以下载。祝您竞速愉快！"
-		}
+        "unpacking...": "解压中..."
+    }
 }
