--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
         "ABOUT": "ACERCA",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infraestructura y aplicación de compilación\nNitro4CSR - Gestión de recursos e integración de datos de la comunidad\nFREYCKSSON - Actualización de recursos\nTheMaintainers - Creación y actualización de datos de la comunidad\n\nCorreo electrónico de contacto: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "TODOS LOS AUTOS DEBEN ESTAR AL MÁXIMO DE ÉLITE:",
         "ALL CARS SHOULD BE RESTORED:": "TODOS LOS AUTOS DEBEN SER RESTAURADOS:",
         "AUDIO": "AUDIO",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
         "Agree": "Agree",
         "All the best races of the racers are here! Let's see this hall of fame": "¡Las mejores carreras de los corredores están aquí! ¡Veamos este salón de la fama!",
+        "Amounts": "Cantidades",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "¡Se ha detectado un error, ya estamos al tanto del problema y estamos buscando una solución!",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "Se ha detectado un error. Ya hemos analizado el problema y así es como puede solucionarlo:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "Y por último, haz clic para ver información adicional sobre el auto.",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "¡Conviértete en parte de nuestra gran comunidad de juegos y mantente al día con las últimas actualizaciones del juego!",
         "Best result and racer. Click to watch the best shift video!": "Mejor resultado y mejor piloto. Haz clic para ver el video.!",
         "Boss time: ": "Tiempo del Jefe: ",
+        "Build delta changes...": "Construyendo cambios delta...",
         "CAR INFO (from Vision spreadsheet)": "INFORMACION DEL AUTO (vision)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "AUTOS EN COLECCIÓN: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "COMUNIDAD",
         "CONFIRM CHANGES": "CONFIRMAR CAMBIOS",
         "CONNECTION FAILED": "CONEXIÓN FALLIDA",
         "CREATORS": "CREADORES",
         "CREDITS": "CREDITOS",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – ¡Este juego de simulador de conducción redefine lo que pensabas que era posible en tu dispositivo móvil!\n\nEstableciendo un nuevo estándar en visuals de juegos de carreras, CSR2 ofrece arrastres hiperrealistas en la palma de tu mano. Compite contra jugadores en vivo de todo el mundo con tus superdeportivos personalizados.",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB Será necesario descargar datos: <color= #FFAA0D>{0}</color>, Asegúrese de no estar utilizando internet limitado y confirme la descarga.",
+        "Campaigns": "Campaigns",
         "Car name": "Nombre del Auto",
+        "Check minor updates...": "Verificando actualizaciones menores...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Consulta el costos de cada parte, así como las Piezas de Nivel 6!",
+        "Check release updates...": "Verificando actualizaciones de lanzamiento...",
         "City camera speed": "Velocidad de Camara",
         "Click here to change the leaderboard!": "Haga clic aquí para cambiar la clasificación!",
         "Click to change the car type!": "Haga clic para cambiar el vehículo!",
         "DATABASE OUTDATED": "BASE DE DATOS OBSOLETA",
         "DONATION": "DONACIÓN",
         "DYNO:": "DYNO:",
+        "Database liquidation...": "Liquidación de base de datos...",
         "Do you have your own idea on how to improve the app?": "¿Tienes tu propia idea sobre cómo mejorar la aplicación?",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "No olvides indicar la campaña que deseas apoyar\nde lo contrario el dinero se asignará a la campaña más grande",
+        "Donater": "Donante",
         "Download failed, check your internet connection and restart the app": "Descarga fallida, verifique la conexión a Internet he reinicie la aplicación",
         "Driver": "Conductor",
         "ELITE MAX": "ELITE MAX",
@@ -58,23 +66,31 @@
         "FAVORITEs": "FAVORITOS",
         "FINAL DRIVE": "TRANSMISIÓN",
         "FPS limiter": "FPS limiter",
+        "Failed download, check internet connection and restart app": "Descarga fallida, verifica tu conexión a Internet y reinicia la aplicación",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Por fin podemos ver a los jugadores más rápidos y sus autos. ¡Acompáñame, te lo mostraré!!",
         "Find out how many elite components you need to fully upgrade your car!": "Descubre cuántos componentes de élite necesitas para actualizar completamente tu auto!",
+        "Finishing...": "Finalizando...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "Para un funcionamiento estable de la aplicación, se recomienda tener al menos 5 GB de almacenamiento libre en su dispositivo. Libere espacio e inténtelo de nuevo.",
         "GRAPHICS": "GRAPHICS",
         "Gacha imports": "Importaciones",
         "Get update!": "Obtener actualización!",
         "Get updated information on how many Legends components you need to restore your car!": "Obtén información actualizada sobre cuántos componentes Legends necesitas para restaurar tu auto!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "Obteniendo lanzamiento {0}...",
+        "Getting releases data...": "Obteniendo datos de lanzamientos...",
+        "Getting updates {0}...": "Obteniendo actualizaciones {0}...",
         "Graphics quality": "Graphics quality",
+        "I have an idea to improve your app:": "Tengo una idea para mejorar tu aplicación:",
         "I know it already": "ya lo se",
         "INBOX": "MENSAJES",
         "Ignore": "Ignorar",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "En un mundo donde las centésimas de segundo marcan la diferencia entre los profesionales y las leyendas, conviértete en el conductor número 1 de la escena.\n\nEnciende tus fantasías de carreras y experimenta la emoción de llevar al límite tus vehículos de alto rendimiento favoritos.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Para el correcto funcionamiento es necesario descargar datos adicionales, por favor verifique su conexión a internet y vuelva a intentarlo.",
+        "Initialization...": "Inicializando...",
         "Initializing database...": "Inicializando la base de datos...",
+        "LET'S GO": "VAMOS",
         "LINKER": "ENLACES",
         "LOADING SCREEN": "PANTALLA DE CARGA",
+        "Leaderboard": "Leaderboard",
         "Let's choose the unrestored version": "Elijamos la versión sin restaurar",
         "Let's go!": "¡Vamos!",
         "Let's look at ELITES": "Veamos los AUTOS ÉLITE",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "¡Hagamos que la aplicación sea aún más genial juntos!",
         "MILESTONE SEASON CAR": "AUTO DE TEMPORADA",
         "Main campaigns": "Campañas principales",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "¡Conoce la actualización de CSR2 5.9.0! \n\nNovedades: \n- Mejoras en la tienda web \n- Seguimiento de salida y cambio perfecto para logros \n- Corrección de errores y optimización \n\nRevisa Linker para descargar. ¡Felices carreras!",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "¡Conoce la actualización del hub 1.1.4! \nNovedades: \n- Nueva función de MENSAJES \n- Visualización de colecciones sin premio \n- Música del evento de los 80 añadida \n- Corrección de errores y optimización \n\n¡Felices carreras!",
         "Music clip": "Musica",
         "Music volume": "Volumen",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "NITRO",
         "NOT ENOUGH STORAGE": "ALMACENAMIENTO INSUFICIENTE",
         "Need to update or add to your community?": "¿Necesitas actualizar o añadir algo a tu comunidad?",
+        "No minor updates... Welcome to HUB!": "No hay actualizaciones menores... ¡Bienvenido al HUB!",
+        "No new releases... checking minor": "No hay nuevos lanzamientos... verificando menores",
         "Number of upgrades and fusion parts": "Número de actualizaciones y piezas de fusión",
         "OFF": "Apagar",
         "ON": "Encender",
         "OPEN CONFIGURATOR": "ABRIR",
         "OTHERS": "OTROS",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "Ups, perdiste tu conexión a Internet e interceptamos algunos de los coches. Inténtalo de nuevo la próxima vez.",
         "Other": "Otros",
         "PRIZE CAR": "AUTO PREMIADO",
         "Petrol or electric car": "Auto de Gasolina o Eléctrico",
+        "Please update the details for my community:": "Por favor, actualiza los detalles de mi comunidad:",
         "Preparing the city...": "Preparando la ciudad...",
         "Price of full car upgrades": "Precio de las mejoras completas del auto",
         "Price of the car:": "Precio del auto:",
@@ -112,6 +133,7 @@
         "Restart": "Reanudar",
         "SEASON CARS": "AUTOS DE TEMPORADA",
         "SETTINGS": "AJUSTES",
+        "SOON": "PRONTO",
         "Save": "Salvar",
         "Secondary campaigns": "Campañas secundarias",
         "Sites": "Sitios",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "Este auto se puede obtener derrotando al jefe.",
         "This car cannot be obtained anywhere": "Este auto no se puede conseguir en ningún lado.",
         "This car is a part of a collection and can be purchased with collection credits.": "Este auto es parte de una colección y se puede comprar con créditos de colección..",
+        "This is downloadable content... Cars will arrive soon, please wait.": "Este es contenido descargable... Los coches llegarán pronto, por favor espera.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Esto es un autoshow: ¡aquí encontrarás información sobre todos los autos! Veamos.",
         "This is the podium, the best cars and drivers show off here": "Este es el podio, los mejores autos y pilotos se lucen aquí",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "¡Este proyecto fue creado para automatizar y consolidar la información necesaria para el juego en un solo lugar!\n\nCasi todos los recursos de la aplicación pertenecen al juego CSR2 y son propiedad de NaturalMotion => Zynga => Take-Two Interactive. Los recursos se utilizan únicamente para mostrar información de referencia para la comunidad de jugadores y nada más.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "¡Hemos implementado MENSAJES para que estés al tanto de todos los eventos importantes en el CSR2-HUB!\r\n\r\n← Selecciona un mensaje para verlo.",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "Comenzaremos el desarrollo activo de la función de esta sección después de recaudar los fondos necesarios para ella.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "¡Estamos orgullosos de la riqueza de conocimiento que ha acumulado nuestra comunidad y ofrecemos espacios para compartir y seguir las mejores prácticas de carreras!",
+        "Welcome to HUB!": "¡Bienvenido al HUB!",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "Escríbenos: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "Puedes agregar autos importantes a tus favoritos",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Puedes encontrar el auto que necesitas por fabricante o grupo de autos. Incluso hay una sección de favoritos.!",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "Puedes ver las especificaciones visuales aquí",
         "You could have won this car in the following seasons:": "Este auto podría haber ganado el campeonato de equipos. En las temporadas siguientes:",
         "Your app version is outdated. An update is required.": "La versión de su aplicación está obsoleta. Se requiere una actualización.",
+        "corrupted archive or not enough space...": "archivo corrupto o espacio insuficiente...",
+        "finished": "terminado",
+        "finished - {0} seconds": "terminado - {0} segundos",
+        "finishing release...": "finalizando lanzamiento...",
         "text coming soon...": "texto próximamente...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "¡Conoce la actualización de CSR2 5.9.0! \n\nNovedades: \n- Mejoras en la tienda web \n- Seguimiento de salida y cambio perfecto para logros \n- Corrección de errores y optimización \n\nRevisa Linker para descargar. ¡Felices carreras!"
-		}
+        "unpacking...": "descomprimiendo..."
+    }
 }
