--- a/Localisation/IT.json
+++ b/Localisation/IT.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【ATTENZIONE】</color> - DIMENSIONE DEL DOWNLOAD ELEVATA",
         "ABOUT": "INFORMAZIONI",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruttura e applicazione di costruzione\nNitro4CSR - Gestione risorse e integrazione dati della comunità\nFREYCKSSON - Aggiornamento risorse\nTheMaintainers - Creazione e aggiornamento dati della comunità\n\nEditore: ムRimgine Entertainment\n\nE-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruttura e applicazione di build\nNitro4CSR - Gestione delle risorse e integrazione dei dati della community\nFREYCKSSON - Aggiornamento delle risorse\nTheMaintainers - Creazione e aggiornamento dei dati della community\n\nE-mail di contatto: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "TUTTE LE AUTO DEVONO ESSERE POTENZIATE AL MASSIMO (ÉLITE):",
         "ALL CARS SHOULD BE RESTORED:": "TUTTE LE AUTO DEVONO ESSERE RESTAURATE:",
         "AUDIO": "AUDIO",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Modalità <color=#FFD540>PRO</color> del SALONE DELL'AUTO (info tecniche)",
         "Agree": "Accetta",
         "All the best races of the racers are here! Let's see this hall of fame": "Tutte le migliori gare dei piloti sono qui! Scopriamo questa hall of fame!",
+        "Amounts": "Importi",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "È stato rilevato un errore. Siamo già a conoscenza del problema e stiamo lavorando a una soluzione!",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "È stato rilevato un errore. Abbiamo già analizzato il problema ed ecco come risolverlo:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "Infine, clicca per vedere informazioni aggiuntive sull'auto",
@@ -29,6 +30,7 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "Diventa parte della nostra grande community di gioco e resta aggiornato sugli ultimi aggiornamenti del gioco!",
         "Best result and racer. Click to watch the best shift video!": "Miglior risultato e pilota. Clicca per vedere il video del miglior cambio!",
         "Boss time: ": "Tempo del boss: ",
+        "Build delta changes...": "Creazione delle modifiche delta...",
         "CAR INFO (from Vision spreadsheet)": "INFO AUTO (dalla tabella Vision)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "AUTO IN COLLEZIONE: <color=red>{0}</color>",
         "COMMUNITY": "COMMUNITY",
@@ -36,17 +38,23 @@
         "CONNECTION FAILED": "CONNESSIONE FALLITA",
         "CREATORS": "CREATORI",
         "CREDITS": "CREDITI",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – Questo gico di simulazione di guida ridefinisce ciò che pensavi possibile sul tuo dispositivo mobile!\n\nStabilendo un nuovo standard nella grafica dei giochi di corse, CSR2 offre drag racing iperrealista nel palmo della tua mano. Competi contro giocatori live di tutto il mondo con le tue supercar personalizzate.",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB deve scaricare dati: <color= #FFAA0D>{0}</color>. Assicurati di non usare una connessione limitata e conferma lo scaricamento.",
+        "Campaigns": "Campagne",
         "Car name": "Nome auto",
+        "Check minor updates...": "Controllo degli aggiornamenti minori...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Scopri il costo di ogni parte e gli effetti degli upgrade di Stadio 6!",
+        "Check release updates...": "Controllo degli aggiornamenti di versione...",
         "City camera speed": "Velocità della telecamera in città",
         "Click here to change the leaderboard!": "Clicca qui per cambiare la classifica!",
         "Click to change the car type!": "Clicca per cambiare il tipo di auto!",
         "DATABASE OUTDATED": "DATABASE OBSOLETO",
         "DONATION": "DONAZIONE",
         "DYNO:": "BANCO:",
+        "Database liquidation...": "Svuotamento database...",
         "Do you have your own idea on how to improve the app?": "Hai un'idea tua su come migliorare l'app?",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "Non dimenticare di indicare la campagna da sostenere\naltrimenti i fondi andranno alla campagna più grande",
+        "Donater": "Donatore",
         "Download failed, check your internet connection and restart the app": "Download fallito. Controlla la connessione e riavvia l'app.",
         "Driver": "Pilota",
         "ELITE MAX": "ÉLITE MASSIMO",
@@ -58,23 +66,31 @@
         "FAVORITEs": "PREFERITI",
         "FINAL DRIVE": "TRASMISSIONE FINALE",
         "FPS limiter": "Limitatore FPS",
+        "Failed download, check internet connection and restart app": "Download fallito, controlla la connessione Internet e riavvia l'app",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finalmente possiamo vedere i giocatori più veloci e le loro auto. Seguimi, ti mostro!",
         "Find out how many elite components you need to fully upgrade your car!": "Scopri quanti componenti élite servono per potenziare al massimo la tua auto!",
+        "Finishing...": "Completamento...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "Per un funzionamento stabile dell'applicazione, si consiglia di avere almeno 5 GB di spazio libero sul dispositivo. Libera spazio e riprova.",
         "GRAPHICS": "GRAFICA",
         "Gacha imports": "Importazioni Gacha",
         "Get update!": "Ottieni aggiornamento!",
         "Get updated information on how many Legends components you need to restore your car!": "Ottieni info aggiornate sui componenti Legends necessari per restaurare la tua auto!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "Recupero della versione {0}...",
+        "Getting releases data...": "Recupero dei dati delle versioni...",
+        "Getting updates {0}...": "Recupero degli aggiornamenti {0}...",
         "Graphics quality": "Qualità grafica",
+        "I have an idea to improve your app:": "Ho un'idea per migliorare la tua app:",
         "I know it already": "Lo so già",
         "INBOX": "MESSAGGI",
         "Ignore": "Ignora",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "In un mondo dove i centesimi di secondo segnano la differenza tra professionisti e leggende, diventa il pilota numero 1 sulla scena.\n\nAccendi le tue fantasie di corse e sperimenta il brivido di spingere al limite i tuoi veicoli ad alte prestazioni preferiti.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Per funzionare correttamente, l'app richiede dati aggiuntivi. Controlla la connessione e riprova.",
+        "Initialization...": "Inizializzazione...",
         "Initializing database...": "Inizializzazione database...",
+        "LET'S GO": "ANDIAMO",
         "LINKER": "COLLEGAMENTI",
         "LOADING SCREEN": "SCHERMATA DI CARICAMENTO",
+        "Leaderboard": "Classifica",
         "Let's choose the unrestored version": "Scegliamo la versione non restaurata",
         "Let's go!": "Andiamo!",
         "Let's look at ELITES": "Diamo un'occhiata alle ÉLITE",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "Rendiamo l'app ancora più fantastica insieme!",
         "MILESTONE SEASON CAR": "AUTO STORICA DELLA STAGIONE",
         "Main campaigns": "Campagne principali",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Scopri l'aggiornamento di CSR2 5.9.0! \n\nNovità: \n- Miglioramenti al negozio online \n- Tracciamento partenza e cambio perfetti per i successi \n- Bug fix e ottimizzazioni \n\nControlla Linker per il download. Buone corse!",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Scopri l'aggiornamento dell'hub 1.1.4! \nNovità: \n- Nuova funzione MESSAGGI \n- Visualizzazione collezioni senza premio \n- Musica dell'evento anni 80 aggiunta \n- Bug fix e ottimizzazioni \n\nBuone corse!",
         "Music clip": "Brano musicale",
         "Music volume": "Volume musica",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "PROTOSSIDO DI AZOTO",
         "NOT ENOUGH STORAGE": "SPAZIO DI ARCHIVIAZIONE INSUFFICIENTE",
         "Need to update or add to your community?": "Hai bisogno di aggiornare o aggiungere qualcosa alla tua community?",
+        "No minor updates... Welcome to HUB!": "Nessun aggiornamento minore... Benvenuto nell'HUB!",
+        "No new releases... checking minor": "Nessuna nuova versione... controllo aggiornamenti minori",
         "Number of upgrades and fusion parts": "Numero di upgrade e parti di fusione",
         "OFF": "SPENTO",
         "ON": "ACCESO",
         "OPEN CONFIGURATOR": "APRI CONFIGURATORE",
         "OTHERS": "ALTRO",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "Oops, hai perso la connessione Internet e abbiamo intercettato alcune macchine. Riprova la prossima volta.",
         "Other": "Altro",
         "PRIZE CAR": "AUTO PREMIO",
         "Petrol or electric car": "Auto a benzina o elettrica",
+        "Please update the details for my community:": "Per favore, aggiorna i dettagli per la mia community:",
         "Preparing the city...": "Preparazione della città...",
         "Price of full car upgrades": "Costo degli upgrade completi",
         "Price of the car:": "Prezzo dell'auto:",
@@ -112,6 +133,7 @@
         "Restart": "Riavvia",
         "SEASON CARS": "AUTO DI STAGIONE",
         "SETTINGS": "IMPOSTAZIONI",
+        "SOON": "PROSSIMAMENTE",
         "Save": "Salva",
         "Secondary campaigns": "Campagne secondarie",
         "Sites": "Siti",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "Questa auto si ottiene sconfiggendo il boss",
         "This car cannot be obtained anywhere": "Questa auto non è disponibile da nessuna parte",
         "This car is a part of a collection and can be purchased with collection credits.": "Questa auto fa parte di una collezione e può essere acquistata con crediti collezione.",
+        "This is downloadable content... Cars will arrive soon, please wait.": "Questo è contenuto scaricabile... Le macchine arriveranno presto, attendere prego.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Questo è il SALONE DELL'AUTO: qui trovi tutte le info sulle auto! Vediamo.",
         "This is the podium, the best cars and drivers show off here": "Questo è il podio, dove si esibiscono le auto e i piloti migliori",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Questo progetto è stato creato per automatizzare e raccogliere le informazioni di gioco in un unico posto!\n\nQuasi tutte le risorse dell'app appartengono a CSR2 e sono proprietà di NaturalMotion => Zynga => Take-Two Interactive. Sono usate solo per visualizzare informazioni di riferimento per la comunità.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "Abbiamo implementato MESSAGGI per tenerti aggiornato su tutti gli eventi importanti nel CSR2-HUB!\r\n\r\n← Seleziona un messaggio per visualizzarlo.",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "Inizieremo lo sviluppo attivo della funzione di questa sezione dopo aver raccolto i fondi necessari.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "Siamo orgogliosi della ricchezza di conoscenze accumulate dalla nostra community e offriamo spazi per condividere e seguire le migliori pratiche di gara!",
+        "Welcome to HUB!": "Benvenuto nell'HUB!",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "Scrivici: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "Puoi aggiungere auto importanti ai preferiti",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Cerca auto per marca o gruppo. C'è anche una sezione preferiti!",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "Qui vedi le specifiche visive",
         "You could have won this car in the following seasons:": "Avresti potuto vincere questa auto nelle stagioni:",
         "Your app version is outdated. An update is required.": "La tua versione dell'app è obsoleta. È richiesto un aggiornamento.",
+        "corrupted archive or not enough space...": "archivio corrotto o spazio insufficiente...",
+        "finished": "completato",
+        "finished - {0} seconds": "completato - {0} secondi",
+        "finishing release...": "completamento versione...",
         "text coming soon...": "testo in arrivo...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Scopri l'aggiornamento di CSR2 5.9.0! \n\nNovità: \n- Miglioramenti al negozio online \n- Tracciamento partenza e cambio perfetti per i successi \n- Bug fix e ottimizzazioni \n\nControlla Linker per il download. Buone corse!"
-		}
+        "unpacking...": "estrazione..."
+    }
 }
