--- a/Localisation/KO.json
+++ b/Localisation/KO.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【주의】</color> -    큰 다운로드 크기",
         "ABOUT": "정보",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - 인프라 및 빌드 애플리케이션\nNitro4CSR - 리소스 관리 및 커뮤니티 데이터 통합\nFREYCKSSON - 리소스 업데이트\nTheMaintainers - 커뮤니티 데이터 생성 및 업데이트\n\n문의 이메일: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "모든 차량을 엘리트 최대화해야 합니다:",
         "ALL CARS SHOULD BE RESTORED:": "모든 차량을 복구해야 합니다:",
         "AUDIO": "오디오",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "오토쇼 <color=#FFD540>PRO</color> 모드  (기술 정보)",
         "Agree": "동의",
         "All the best races of the racers are here! Let's see this hall of fame": "모든 최고 레이스가 여기에 있습니다! 명예의 전당 확인하기",
+        "Amounts": "금액",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "오류가 감지되었습니다. 문제를 인지하고 해결을 위해 노력 중입니다!",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "오류가 감지되었습니다. 문제를 분석한 후 해결 방법은 다음과 같습니다:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "마지막으로, 자동차에 대한 추가 정보를 보려면 클릭하세요.",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "우리의 대규모 게이밍 커뮤니티의 일원이 되어 최신 게임 업데이트를 놓치지 마세요!",
         "Best result and racer. Click to watch the best shift video!": "최고 기록과 레이서. 클릭하여 기록 확인하기!",
         "Boss time: ": "보스 시간: ",
+        "Build delta changes...": "델타 변경 사항 빌드 중...",
         "CAR INFO (from Vision spreadsheet)": "현재 자동차 정보",
         "CARS IN COLLECTION: <color=red>{0}</color>": "소장 차량: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "커뮤니티",
         "CONFIRM CHANGES": "변경 사항 확인",
         "CONNECTION FAILED": "연결 끊김",
         "CREATORS": "제작자",
         "CREDITS": "출처",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – 이 드라이빙 시뮬레이션 게임은 모바일 기기에서 가능하다고 생각했던 것을 재정의합니다!\n\n레이싱 게임 비주얼의 새로운 표준을 세우는 CSR2는 초현실적인 드래그 레이싱을 여러분의 손 안에 선사합니다. 여러분이 직접定制한 슈퍼카로 전 세계의 실시간 플레이어와 경쟁하세요.",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>허브는 첫 시작을 위한 데이터를 다운로드해야 합니다.: <color= #FFAA0D>{0}</color>, 모바일 네트워크가 소모될 수 있습니다. 현재 네트워크의 상태를 확인 후 다운로드를 시작해주세요.",
+        "Campaigns": "캠페인",
         "Car name": "자동차 이름",
+        "Check minor updates...": "사소한 업데이트 확인 중...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "각 부품의 수치와, 6단계 부품의 효과를 확인하세요.",
+        "Check release updates...": "릴리스 업데이트 확인 중...",
         "City camera speed": "도시 카메라 속도",
         "Click here to change the leaderboard!": "이곳을 클릭하여 순위표를 변경하세요!",
         "Click to change the car type!": "차종을 변경하려면 클릭하세요!",
         "DATABASE OUTDATED": "구형 데이터베이스",
         "DONATION": "기부",
         "DYNO:": "다이노:",
+        "Database liquidation...": "데이터베이스 정리 중...",
         "Do you have your own idea on how to improve the app?": "앱을 개선할 나만의 아이디어가 있으신가요?",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "지원할 캠페인을 반드시 지정하세요\n지정하지 않을 경우 가장 큰 캠페인에 기부됩니다",
+        "Donater": "기부자",
         "Download failed, check your internet connection and restart the app": "다운로드에 실패하였습니다, 인터넷 연결을 확인하고 앱을 재시작하세요.",
         "Driver": "운전자",
         "ELITE MAX": "엘리트 최대화",
@@ -58,23 +66,31 @@
         "FAVORITEs": "즐겨찾기",
         "FINAL DRIVE": "파이널 드라이브",
         "FPS limiter": "FPS 제한",
+        "Failed download, check internet connection and restart app": "다운로드 실패, 인터넷 연결을 확인하고 앱을 재시작하세요",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "가장 빠른 플레이어들과 그들의 자동차를 볼 수 있습니다. 이곳으로 이동하세요, 제가 보여드리겠습니다!",
         "Find out how many elite components you need to fully upgrade your car!": "자동차를 완전히 업그레이드 하기 위해 필요한 몇 가지 엘리트 부품 구성 요소를 알아보세요!",
+        "Finishing...": "마무리 중...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "앱의 안정적인 작동을 위해 기기에는 최소 5GB의 여유 저장 공간이 필요합니다. 공간을 확보한 후 다시 시도하세요.",
         "GRAPHICS": "그래픽",
         "Gacha imports": "희귀한 수집 부품 사양양",
         "Get update!": "업데이트 하기!",
         "Get updated information on how many Legends components you need to restore your car!": "자동차 복원에 필요한 레전드 컴포넌트 수에 대한 최신 정보를 확인하세요!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "릴리스 {0} 가져오는 중...",
+        "Getting releases data...": "릴리스 데이터 가져오는 중...",
+        "Getting updates {0}...": "업데이트 {0} 가져오는 중...",
         "Graphics quality": "그래픽 품질",
+        "I have an idea to improve your app:": "당신의 앱을 개선할 아이디어가 있습니다:",
         "I know it already": "건너뛰기",
         "INBOX": "메시지",
         "Ignore": "무시",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "100분의 1초가 프로와 레전드의 차이를 만드는 세계에서 #1 드라이버가 되세요.\n\n당신의 레이싱 판타지를 불붙이고 가장 좋아하는 고성능 차량의 한계를 밀어붙이는 스릴을 경험하세요.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "올바른 작업을 위해 추가 데이터를 다운로드해야 합니다. 인터넷 연결을 확인한 후 다시 시도해 주세요.",
+        "Initialization...": "초기화 중...",
         "Initializing database...": "데이터베이스 초기화 중...",
+        "LET'S GO": "시작하기",
         "LINKER": "연결 도구",
         "LOADING SCREEN": "로딩 화면",
+        "Leaderboard": "리더보드",
         "Let's choose the unrestored version": "저장되지 않은 버전 선택하기",
         "Let's go!": "출발!",
         "Let's look at ELITES": "엘리트 차량을 살펴보세요",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "함께 앱을 더욱 멋지게 만들어 봅시다!",
         "MILESTONE SEASON CAR": "마일스톤 시즌 자동차",
         "Main campaigns": "주요 캠페인",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2 업데이트 5.9.0를 만나보세요! \n\n새로운 기능: \n- 웹스토어 개선 \n- 도전 과제를 위한 퍼펙트 시프트 및 lunch 트래킹 추가 \n- 오류 수정 및 최적화 \n\n다운로드를 위해 Linker를 확인하세요. 행복한 레이싱 되세요!",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "허브 업데이트 1.1.4를 만나보세요! \n새로운 기능: \n- 새 메시지 기능 \n- 보상 없는 컬렉션 표시 추가 \n- 80년대 이벤트 음악 추가 \n- 오류 수정 및 최적화 \n\n행복한 레이싱 되세요!",
         "Music clip": "음악 클립",
         "Music volume": "음악 볼륨",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "아산화질소",
         "NOT ENOUGH STORAGE": "저장 공간 부족",
         "Need to update or add to your community?": "커뮤니티를 업데이트하거나 추가해야 하나요?",
+        "No minor updates... Welcome to HUB!": "사소한 업데이트 없음... HUB에 오신 것을 환영합니다!",
+        "No new releases... checking minor": "새로운 릴리스 없음... 사소한 업데이트 확인 중",
         "Number of upgrades and fusion parts": "업그레이드 및 퓨전 부품 수",
         "OFF": "끄기",
         "ON": "켜기",
         "OPEN CONFIGURATOR": "개방형 구성기",
         "OTHERS": "다른 것들",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "이런, 인터넷 연결이 끊겨 일부 차량을 가로챘습니다. 다음 번에 다시 시도하세요.",
         "Other": "기타",
         "PRIZE CAR": "상품 자동차",
         "Petrol or electric car": "내연기관 또는 전기 자동차",
+        "Please update the details for my community:": "내 커뮤니티의 세부 정보를 업데이트해 주세요:",
         "Preparing the city...": "도시 준비중...",
         "Price of full car upgrades": "자동차 업그레이드이 필요한 총 비용",
         "Price of the car:": "차량 가격:",
@@ -112,6 +133,7 @@
         "Restart": "재시작",
         "SEASON CARS": "시즌 자동차",
         "SETTINGS": "설정",
+        "SOON": "곧",
         "Save": "저장",
         "Secondary campaigns": "보조 캠페인",
         "Sites": "사이트",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "이 자동차는 보스를 상대로 이겨 얻을 수 있습니다.",
         "This car cannot be obtained anywhere": "이 자동차는 구할 수 없습니다.",
         "This car is a part of a collection and can be purchased with collection credits.": "이 자동차는 컬렉션 자동차로, 컬렉션 크레딧으로 구매할 수 있습니다.",
+        "This is downloadable content... Cars will arrive soon, please wait.": "다운로드 가능한 콘텐츠입니다... 차량이 곧 도착할 예정이니 기다려 주세요.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "이곳이 바로 오토쇼입니다! - 모든 자동차에 대한 정보가 이곳에 모여있습니다! 확인해볼까요?",
         "This is the podium, the best cars and drivers show off here": "이곳은 최고의 자동차와 운전자들의 시상대입니다.",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "이 프로젝트는 게임에 필요한 정보를 한 곳에서 자동화하고 수집하기 위해 만들어졌습니다!\n\n애플리케이션의 거의 모든 리소스는 게임 CSR2에 속하며 NaturalMotion => Zynga => Take-Two Interactive의 속성입니다. 사용되는 리소스는 커뮤니티의 참조 정보만 표시하고 그 이상은 표시하지 않습니다.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "여러분이 CSR2-HUB의 모든 중요한 이벤트를 알 수 있도록 메시지 기능을 구현했습니다!\r\n\r\n← 확인할 메시지를 선택하세요.",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "해당 섹션의 기능에 대한 필요한 자금이 모금된 후 적극적인 개발을 시작할 예정입니다.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "우리는 커뮤니티가 축적한 풍부한 지식을 자랑스럽게 생각하며, 레이싱 모범 사례를 공유하고 따라할 수 있는 공간을 제공합니다!",
+        "Welcome to HUB!": "HUB에 오신 것을 환영합니다!",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "문의하기: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "중요한 자동차를 즐겨찾기에 추가할 수 있습니다.",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "자동차 제조업체 그룹에서 필요한 자동차를 찾을 수 있습니다. 당신이 즐겨찾기한 자동차를 위한 섹션도 있습니다.",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "여기에서 현재 자동차가 가진 사양을 확인하세요. ",
         "You could have won this car in the following seasons:": "이 자동차는 시즌 팀 챔피언쉽에서 획득할 수 있습니다.:",
         "Your app version is outdated. An update is required.": "앱 버전이 구식입니다. 업데이트가 필요합니다.",
+        "corrupted archive or not enough space...": "손상된 아카이브 또는 공간 부족...",
+        "finished": "완료됨",
+        "finished - {0} seconds": "완료됨 - {0}초",
+        "finishing release...": "릴리스 마무리 중...",
         "text coming soon...": "텍스트 업데이트 예정...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2 업데이트 5.9.0를 만나보세요! \n\n새로운 기능: \n- 웹스토어 개선 \n- 도전 과제를 위한 퍼펙트 시프트 및 lunch 트래킹 추가 \n- 오류 수정 및 최적화 \n\n다운로드를 위해 Linker를 확인하세요. 행복한 레이싱 되세요!"
-		}
+        "unpacking...": "압축 해제 중..."
+    }
 }
