--- a/Localisation/PL.json
+++ b/Localisation/PL.json
@@ -9,7 +9,7 @@
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【OSTRZEŻENIE】</color> - DUŻY ROZMIAR PLIKU DO POBRANIA",
         "ABOUT": "O APLIKACJI",
-        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nPublisher: ムRimgine Entertainment\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruktura i budowa aplikacji\nNitro4CSR - Zarządzanie zasobami i integracja danych społeczności\nFREYCKSSON - Aktualizacja zasobów\nTheMaintainers - Tworzenie i aktualizacja danych społeczności\n\nWydawca: ムRimgine Entertainment\n\nE-mail kontaktowy: csr2hub.service@gmail.com",
+        "ABS - Infrastrutcture and build application\nNitro4CSR - Resource management and integration community data\nFREYCKSSON - Resource updating\nTheMaintainers - Creating and updating community data\n\nContact e-mail: csr2hub.service@gmail.com": "ABS - Infrastruktura i aplikacja budująca\nNitro4CSR - Zarządzanie zasobami i integracja danych społeczności\nFREYCKSSON - Aktualizacja zasobów\nTheMaintainers - Tworzenie i aktualizacja danych społeczności\n\nE-mail kontaktowy: csr2hub.service@gmail.com",
         "ALL CARS SHOULD BE ELITE MAXED:": "WSZYSTKIE SAMOCHODY POWINNY BYĆ W PELNI ULEPSZONE (ELITE):",
         "ALL CARS SHOULD BE RESTORED:": "WSZYSTKIE SAMOCHODY POWINNY BYĆ ODNOWIONE:",
         "AUDIO": "DŹWIĘK",
@@ -17,6 +17,7 @@
         "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "SALON SAMOCHODOWY <color=#FFD540>PRO</color> tryb (informacje techniczne)",
         "Agree": "Akceptuję",
         "All the best races of the racers are here! Let's see this hall of fame": "Wszystkie najlepsze wyścigi kierowców są tutaj! Zobaczmy tę galerię sław",
+        "Amounts": "Kwoty",
         "An error has been detected, we are already aware of the problem and are looking into a solution!": "Wykryto błąd. Jesteśmy świadomi problemu i pracujemy nad rozwiązaniem!",
         "An error has been detected, we have already analyzed the problem and here is how to fix it:\n\n\n<color=orange>{0}</color>": "Wykryto błąd. Przeanalizowaliśmy problem i oto jak go naprawić:\n\n\n<color=orange>{0}</color>",
         "And finally, click to see additional information about the car": "Na koniec kliknij, aby zobaczyć dodatkowe informacje o samochodzie",
@@ -29,24 +30,31 @@
         "Become part of our large gaming community and stay up to date with the latest game updates!": "Dołącz do naszej dużej społeczności graczy i bądź na bieżąco z najnowszymi aktualizacjami gry!",
         "Best result and racer. Click to watch the best shift video!": "Najlepszy wynik i kierowca. Kliknij, aby obejrzeć wideo z najlepszym przełożeniem!",
         "Boss time: ": "Czas bossa: ",
+        "Build delta changes...": "Budowanie zmian delta...",
         "CAR INFO (from Vision spreadsheet)": "INFORMACJE O SAMOCHODZIE (z arkusza Vision)",
         "CARS IN COLLECTION: <color=red>{0}</color>": "SAMOCHODY W KOLEKCJI: <color=red>{0}</color>",
-        "COMMUNITY": "COMMUNITY",
+        "COMMUNITY": "SPOŁECZNOŚĆ",
         "CONFIRM CHANGES": "POTWIERDŹ ZMIANY",
         "CONNECTION FAILED": "BRAK POŁĄCZENIA",
         "CREATORS": "TWÓRCY",
         "CREDITS": "AUTORZY",
+        "CSR Racing 2 – This driving simulator game redefines what you thought possible on your mobile device!\n\nSetting a new standard in racing game visuals, CSR2 delivers hyper-real drag racing to the palm of your hand. Compete against live players across the world with your custom-built supercars.": "CSR Racing 2 – Ta gra-symulator jazdy redefiniuje to, co uważałeś za możliwe na swoim urządzeniu mobilnym!\n\nUstanawiając nowy standard wizualny w grach wyścigowych, CSR2 zapewnia hiperrealistyczne wyścigi drag racing w Twojej dłoni. Ścigaj się z żywymi graczami z całego świata w swoich customowych supersamochodach.",
         "CSR<color=yellow>2</color>-HUB needs to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB musi pobrać dane: <color= #FFAA0D>{0}</color>. Upewnij się, że nie używasz limitu internetowego, a następnie potwierdź pobieranie",
+        "Campaigns": "Kampanie",
         "Car name": "Nazwa samochodu",
+        "Check minor updates...": "Sprawdzanie drobnych aktualizacji...",
         "Check out the cost of each part, and the effects of Stage 6 upgrades": "Sprawdź koszt każdej części oraz efekty ulepszeń etapu 6",
+        "Check release updates...": "Check release updates...",
         "City camera speed": "Prędkość kamery w mieście",
         "Click here to change the leaderboard!": "Kliknij tutaj, aby zmienić tabelę liderów!",
         "Click to change the car type!": "Kliknij, aby zmienić typ samochodu!",
         "DATABASE OUTDATED": "PRZESTARZAŁA BAZA DANYCH",
         "DONATION": "DAROWIZNA",
         "DYNO:": "DYNAMOMETR:",
+        "Database liquidation...": "Likwidacja bazy danych...",
         "Do you have your own idea on how to improve the app?": "Masz własny pomysł na ulepszenie aplikacji?",
         "Don't forget to indicate the campaign you want to support\notherwise the money will be counted towards the largest campaign": "Nie zapomnij wskazać kampanii, którą chcesz wesprzeć\nw przeciwnym razie środki trafią do największej kampanii",
+        "Donater": "Darczyńca",
         "Download failed, check your internet connection and restart the app": "Pobieranie nie powiodło się. Sprawdź połączenie internetowe i uruchom ponownie aplikację",
         "Driver": "Kierowca",
         "ELITE MAX": "MAKSYMALNA ELITA",
@@ -58,23 +66,31 @@
         "FAVORITEs": "ULUBIONE",
         "FINAL DRIVE": "PRZEKŁADNIA GŁÓWNA",
         "FPS limiter": "Ogranicznik FPS",
+        "Failed download, check internet connection and restart app": "Pobieranie nie powiodło się, sprawdź połączenie internetowe i uruchom ponownie aplikację",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Wreszcie możemy zobaczyć najszybszych graczy i ich samochody. Chodź ze mną, pokażę ci!",
         "Find out how many elite components you need to fully upgrade your car!": "Dowiedz się, ile komponentów elity potrzebujesz, aby w pełni ulepszyć samochód!",
+        "Finishing...": "Kończenie...",
         "For stable operation of the application, it is recommended to have at least 5 GB of free storage on your device. Free up space and try again.": "Aby aplikacja działała stabilnie, zaleca się posiadanie co najmniej 5 GB wolnej pamięci na urządzeniu. Zwolnij miejsce i spróbuj ponownie.",
         "GRAPHICS": "GRAFIKA",
         "Gacha imports": "Importy Gacha",
         "Get update!": "Pobierz aktualizację!",
         "Get updated information on how many Legends components you need to restore your car!": "Uzyskaj aktualne informacje, ile komponentów Legend potrzebujesz do odrestaurowania samochodu!",
-        "Google Drive": "Google Drive",
-        "Google Play": "Google Play",
+        "Getting release {0}...": "Pobieranie wydania {0}...",
+        "Getting releases data...": "Pobieranie danych wydań...",
+        "Getting updates {0}...": "Pobieranie aktualizacji {0}...",
         "Graphics quality": "Jakość grafiki",
+        "I have an idea to improve your app:": "Mam pomysł na ulepszenie Twojej aplikacji:",
         "I know it already": "Już to wiem",
         "INBOX": "WIADOMOŚCI",
         "Ignore": "Ignoruj",
+        "In a world where the hundredths of a second mark the difference between the pros and legends, become the #1 driver on the scene.\n\nIgnite your racing fantasies and experience the thrill of pushing the limits of your favourite high-performance vehicles.": "W świecie, gdzie setne sekundy decydują o różnicy między profesjonalistami a legendami, zostań najlepszym kierowcą na scenie.\n\nRozpal swoje wyścigowe fantazje i doświadcz dreszczyku emocji z przekraczania granic swoich ulubionych pojazdów wysokiej wydajności.",
         "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Aby zapewnić prawidłowe działanie, aplikacja wymaga pobrania dodatkowych danych. Sprawdź połączenie internetowe i spróbuj ponownie",
+        "Initialization...": "Inicjalizacja...",
         "Initializing database...": "Inicjalizacja bazy danych...",
+        "LET'S GO": "ZACZNIJMY",
         "LINKER": "ŁĄCZNIK",
         "LOADING SCREEN": "EKRAN ŁADOWANIA",
+        "Leaderboard": "Tablica wyników",
         "Let's choose the unrestored version": "Wybierzmy nieodrestaurowaną wersję",
         "Let's go!": "Chodźmy!",
         "Let's look at ELITES": "Spójrzmy na ELITARNYM",
@@ -83,6 +99,7 @@
         "Let's make the app even cooler together!": "Sprawmy razem, aby aplikacja była jeszcze lepsza!",
         "MILESTONE SEASON CAR": "SAMOCHÓD SEZONU MILESTONE",
         "Main campaigns": "Kampanie główne",
+        "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Oto aktualizacja CSR2 5.9.0! \n\nNowości: \n- Ulepszenia sklepu internetowego \n- Dodano śledzenie idealnego startu i zmiany biegów dla osiągnięć \n- Naprawa błędów i optymalizacja \n\nSprawdź Linker, aby pobrać. Wesołych wyścigów!",
         "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Oto aktualizacja centrum 1.1.4! \nNowości: \n- Nowa funkcja WIADOMOŚCI \n- Wyświetlanie kolekcji bez nagrody \n- Dodano muzykę z wydarzenia lat 80. \n- Naprawa błędów i optymalizacja \n\nWesołych wyścigów!",
         "Music clip": "Klip muzyczny",
         "Music volume": "Głośność muzyki",
@@ -90,15 +107,19 @@
         "NITROUS OXIDE": "PODTLENEK AZOTU",
         "NOT ENOUGH STORAGE": "BRAK WYSTARCZAJĄCEJ PAMIĘCI",
         "Need to update or add to your community?": "Chcesz zaktualizować lub dodać coś do swojej społeczności?",
+        "No minor updates... Welcome to HUB!": "Brak drobnych aktualizacji... Witaj w HUBIE!",
+        "No new releases... checking minor": "Brak nowych wydań... sprawdzanie drobnych aktualizacji",
         "Number of upgrades and fusion parts": "Liczba ulepszeń i części fusion",
         "OFF": "WYŁ.",
         "ON": "WŁ.",
         "OPEN CONFIGURATOR": "OTWÓRZ KONFIGURATOR",
         "OTHERS": "INNE",
         "Ok": "Ok",
+        "Oops, you lost your internet connection and we intercepted some of the cars. Try again next time.": "Ups, straciłeś połączenie internetowe i przechwyciliśmy niektóre samochody. Spróbuj ponownie następnym razem.",
         "Other": "Inne",
         "PRIZE CAR": "SAMOCHOD-NAGRODA",
         "Petrol or electric car": "Samochód benzynowy lub elektryczny",
+        "Please update the details for my community:": "Proszę zaktualizuj dane mojej społeczności:",
         "Preparing the city...": "Przygotowywanie miasta...",
         "Price of full car upgrades": "Koszt pełnych ulepszeń samochodu",
         "Price of the car:": "Cena samochodu:",
@@ -112,6 +133,7 @@
         "Restart": "Uruchom ponownie",
         "SEASON CARS": "SAMOCHODY SEZONOWE",
         "SETTINGS": "USTAWIENIA",
+        "SOON": "WKROTCE",
         "Save": "Zapisz",
         "Secondary campaigns": "Kampanie dodatkowe",
         "Sites": "Strony",
@@ -125,6 +147,7 @@
         "This car can be obtained by defeating the boss": "Ten samochód można zdobyć, pokonując bossa",
         "This car cannot be obtained anywhere": "Ten samochód nie jest dostępny nigdzie",
         "This car is a part of a collection and can be purchased with collection credits.": "Ten samochód jest częścią kolekcji i można go kupić za punkty kolekcji.",
+        "This is downloadable content... Cars will arrive soon, please wait.": "To jest zawartość do pobrania... Samochody przybędą wkrótce, proszę czekać.",
         "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "To jest SALON SAMOCHODOWY – tutaj zebrano informacje o wszystkich samochodach! Zobaczmy",
         "This is the podium, the best cars and drivers show off here": "To jest podium, gdzie prezentują się najlepsze samochody i kierowcy",
         "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Ten projekt powstał, aby zautomatyzować i zebrać niezbędne informacje do gry w jednym miejscu!\n\nPrawie wszystkie zasoby aplikacji należą do gry CSR2 i są własnością NaturalMotion => Zynga => Take-Two Interactive. Użyte zasoby służą wyłącznie do wyświetlania informacji referencyjnych dla społeczności i nic więcej.",
@@ -144,6 +167,7 @@
         "We have implemented an INBOX so that you are aware of all important events in the CSR2-HUB!\r\n\r\n← Select a message to view": "Wdrożyliśmy WIADOMOŚCI, abyś był na bieżąco ze wszystkimi ważnymi wydarzeniami w CSR2-HUB!\r\n\r\n← Wybierz wiadomość, aby ją wyświetlić.",
         "We will begin active development of the function from this section after collecting the necessary funds for it.": "Rozpoczniemy aktywny rozwój funkcji z tej sekcji po zebraniu niezbędnych funduszy.",
         "We're proud of the wealth of knowledge our community has accumulated and offer places to share and follow racing best practices!": "Jesteśmy dumni z bogactwa wiedzy zgromadzonej przez naszą społeczność i oferujemy miejsca do dzielenia się i śledzenia najlepszych praktyk wyścigowych!",
+        "Welcome to HUB!": "Witaj w HUBIE!",
         "Write to us: <b>csr2hub.service@gmail.com</b>": "Napisz do nas: <b>csr2hub.service@gmail.com</b>",
         "You can add important cars to favorites": "Możesz dodać ważne samochody do ulubionych",
         "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Możesz znaleźć potrzebny samochód według producentów lub grup. Jest nawet sekcja ulubionych!",
@@ -153,7 +177,11 @@
         "You can see the visual specs here": "Tutaj zobaczysz wizualne specyfikacje",
         "You could have won this car in the following seasons:": "Mogłeś zdobyć ten samochód w następujących sezonach:",
         "Your app version is outdated. An update is required.": "Twoja wersja aplikacji jest przestarzała. Wymagana jest aktualizacja.",
+        "corrupted archive or not enough space...": "uszkodzone archiwum lub brak miejsca...",
+        "finished": "zakończono",
+        "finished - {0} seconds": "zakończono - {0} sekund",
+        "finishing release...": "kończenie wydania...",
         "text coming soon...": "wkrótce więcej informacji...",
-		"Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Oto aktualizacja CSR2 5.9.0! \n\nNowości: \n- Ulepszenia sklepu internetowego \n- Dodano śledzenie idealnego startu i zmiany biegów dla osiągnięć \n- Naprawa błędów i optymalizacja \n\nSprawdź Linker, aby pobrać. Wesołych wyścigów!"
-		}
+        "unpacking...": "wypakowywanie..."
+    }
 }
